@@ -3,9 +3,8 @@ package com.yahoo.config.provision.serialization;
 
 import com.yahoo.config.provision.AllocatedHosts;
 import com.yahoo.config.provision.ClusterMembership;
-import com.yahoo.config.provision.Flavor;
+import com.yahoo.config.provision.DockerImage;
 import com.yahoo.config.provision.HostSpec;
-import com.yahoo.config.provision.NodeFlavors;
 import com.yahoo.config.provision.NodeResources;
 import com.yahoo.slime.ArrayTraverser;
 import com.yahoo.slime.Cursor;
@@ -15,7 +14,6 @@ import com.yahoo.slime.SlimeUtils;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Optional;
@@ -44,10 +42,8 @@ public class AllocatedHostsSerializer {
     private static final String aliasesKey = "aliases";
     private static final String hostSpecMembershipKey = "membership";
 
-    // Flavor can be removed when all allocated nodes are docker nodes
-    private static final String flavorKey = "flavor";
-
-    private static final String resourcesKey = "resources";
+    private static final String realResourcesKey = "realResources";
+    private static final String advertisedResourcesKey = "advertisedResources";
     private static final String requestedResourcesKey = "requestedResources";
     private static final String vcpuKey = "vcpu";
     private static final String memoryKey = "memory";
@@ -58,6 +54,9 @@ public class AllocatedHostsSerializer {
 
     /** Wanted version */
     private static final String hostSpecVespaVersionKey = "vespaVersion";
+
+    /** Wanted docker image repo */
+    private static final String hostSpecDockerImageRepoKey = "dockerImageRepo";
 
     /** Current version */
     private static final String hostSpecCurrentVespaVersionKey = "currentVespaVersion";
@@ -82,8 +81,12 @@ public class AllocatedHostsSerializer {
         host.membership().ifPresent(membership -> {
             object.setString(hostSpecMembershipKey, membership.stringValue());
             object.setString(hostSpecVespaVersionKey, membership.cluster().vespaVersion().toFullString());
+            membership.cluster().dockerImageRepo().ifPresent(repo -> {
+                object.setString(hostSpecDockerImageRepoKey, repo.untagged());
+            });
         });
-        host.flavor().ifPresent(flavor -> toSlime(flavor, object));
+        toSlime(host.realResources(), object.setObject(realResourcesKey));
+        toSlime(host.advertisedResources(), object.setObject(advertisedResourcesKey));
         host.requestedResources().ifPresent(resources -> toSlime(resources, object.setObject(requestedResourcesKey)));
         host.version().ifPresent(version -> object.setString(hostSpecCurrentVespaVersionKey, version.toFullString()));
         host.networkPorts().ifPresent(ports -> NetworkPortsSerializer.toSlime(ports, object.setArray(hostSpecNetworkPortsKey)));
@@ -96,13 +99,6 @@ public class AllocatedHostsSerializer {
             aliases.addString(alias);
     }
 
-    private static void toSlime(Flavor flavor, Cursor object) {
-        if (flavor.isConfigured())
-            object.setString(flavorKey, flavor.name());
-        else
-            toSlime(flavor.resources(), object.setObject(resourcesKey));
-    }
-
     private static void toSlime(NodeResources resources, Cursor resourcesObject) {
         resourcesObject.setDouble(vcpuKey, resources.vcpu());
         resourcesObject.setDouble(memoryKey, resources.memoryGb());
@@ -112,49 +108,57 @@ public class AllocatedHostsSerializer {
         resourcesObject.setString(storageTypeKey, storageTypeToString(resources.storageType()));
     }
 
-    public static AllocatedHosts fromJson(byte[] json, Optional<NodeFlavors> nodeFlavors) {
-        return fromSlime(SlimeUtils.jsonToSlime(json).get(), nodeFlavors);
+    public static AllocatedHosts fromJson(byte[] json) {
+        return fromSlime(SlimeUtils.jsonToSlime(json).get());
     }
 
-    public static AllocatedHosts fromSlime(Inspector inspector, Optional<NodeFlavors> nodeFlavors) {
+    public static AllocatedHosts fromSlime(Inspector inspector) {
         Inspector array = inspector.field(mappingKey);
         Set<HostSpec> hosts = new LinkedHashSet<>();
-        array.traverse((ArrayTraverser)(i, host) -> hosts.add(hostFromSlime(host.field(hostSpecKey), nodeFlavors)));
+        array.traverse((ArrayTraverser)(i, host) -> {
+            hosts.add(hostFromSlime(host.field(hostSpecKey)));
+        });
         return AllocatedHosts.withHosts(hosts);
     }
 
-    private static HostSpec hostFromSlime(Inspector object, Optional<NodeFlavors> nodeFlavors) {
-        return new HostSpec(object.field(hostSpecHostNameKey).asString(),
-                            aliasesFromSlime(object),
-                            flavorFromSlime(object, nodeFlavors),
-                            object.field(hostSpecMembershipKey).valid() ? Optional.of(membershipFromSlime(object)) : Optional.empty(),
-                            optionalString(object.field(hostSpecCurrentVespaVersionKey)).map(com.yahoo.component.Version::new),
-                            NetworkPortsSerializer.fromSlime(object.field(hostSpecNetworkPortsKey)),
-                            nodeResourcesFromSlime(object.field(requestedResourcesKey)));
+    private static HostSpec hostFromSlime(Inspector object) {
+
+        if (object.field(hostSpecMembershipKey).valid()) { // Hosted
+            return new HostSpec(object.field(hostSpecHostNameKey).asString(),
+                                nodeResourcesFromSlime(object.field(realResourcesKey)),
+                                nodeResourcesFromSlime(object.field(advertisedResourcesKey)),
+                                optionalNodeResourcesFromSlime(object.field(requestedResourcesKey)), // TODO: Make non-optional when we serialize NodeResources.unspecified()
+                                membershipFromSlime(object),
+                                optionalString(object.field(hostSpecCurrentVespaVersionKey)).map(com.yahoo.component.Version::new),
+                                NetworkPortsSerializer.fromSlime(object.field(hostSpecNetworkPortsKey)),
+                                optionalDockerImage(object.field(hostSpecDockerImageRepoKey)));
+        }
+        else {
+            return new HostSpec(object.field(hostSpecHostNameKey).asString(),
+                                aliasesFromSlime(object),
+                                NetworkPortsSerializer.fromSlime(object.field(hostSpecNetworkPortsKey)));
+        }
     }
 
     private static List<String> aliasesFromSlime(Inspector object) {
-        if ( ! object.field(aliasesKey).valid()) return Collections.emptyList();
+        if ( ! object.field(aliasesKey).valid()) return List.of();
         List<String> aliases = new ArrayList<>();
         object.field(aliasesKey).traverse((ArrayTraverser)(index, alias) -> aliases.add(alias.asString()));
         return aliases;
     }
 
-    private static Optional<Flavor> flavorFromSlime(Inspector object, Optional<NodeFlavors> nodeFlavors) {
-        if (object.field(flavorKey).valid() && nodeFlavors.isPresent() && nodeFlavors.get().exists(object.field(flavorKey).asString()))
-            return nodeFlavors.get().getFlavor(object.field(flavorKey).asString());
-        else
-            return nodeResourcesFromSlime(object.field(resourcesKey)).map(resources -> new Flavor(resources));
+    private static NodeResources nodeResourcesFromSlime(Inspector resources) {
+        return new NodeResources(resources.field(vcpuKey).asDouble(),
+                                 resources.field(memoryKey).asDouble(),
+                                 resources.field(diskKey).asDouble(),
+                                 resources.field(bandwidthKey).asDouble(),
+                                 diskSpeedFromSlime(resources.field(diskSpeedKey)),
+                                 storageTypeFromSlime(resources.field(storageTypeKey)));
     }
 
-    private static Optional<NodeResources> nodeResourcesFromSlime(Inspector resources) {
-        if ( ! resources.valid()) return Optional.empty();
-        return Optional.of(new NodeResources(resources.field(vcpuKey).asDouble(),
-                                             resources.field(memoryKey).asDouble(),
-                                             resources.field(diskKey).asDouble(),
-                                             resources.field(bandwidthKey).asDouble(),
-                                             diskSpeedFromSlime(resources.field(diskSpeedKey)),
-                                             storageTypeFromSlime(resources.field(storageTypeKey))));
+    private static NodeResources optionalNodeResourcesFromSlime(Inspector resources) {
+        if ( ! resources.valid()) return NodeResources.unspecified();
+        return nodeResourcesFromSlime(resources);
     }
 
     private static NodeResources.DiskSpeed diskSpeedFromSlime(Inspector diskSpeed) {
@@ -176,7 +180,6 @@ public class AllocatedHostsSerializer {
     }
 
     private static NodeResources.StorageType storageTypeFromSlime(Inspector storageType) {
-        if ( ! storageType.valid()) return NodeResources.StorageType.getDefault(); // TODO: Remove this line after December 2019
         switch (storageType.asString()) {
             case "remote" : return NodeResources.StorageType.remote;
             case "local" : return NodeResources.StorageType.local;
@@ -196,11 +199,20 @@ public class AllocatedHostsSerializer {
 
     private static ClusterMembership membershipFromSlime(Inspector object) {
         return ClusterMembership.from(object.field(hostSpecMembershipKey).asString(),
-                                      com.yahoo.component.Version.fromString(object.field(hostSpecVespaVersionKey).asString()));
+                                      com.yahoo.component.Version.fromString(object.field(hostSpecVespaVersionKey).asString()),
+                                      object.field(hostSpecDockerImageRepoKey).valid()
+                                              ? Optional.of(DockerImage.fromString(object.field(hostSpecDockerImageRepoKey).asString()))
+                                              : Optional.empty());
     }
 
     private static Optional<String> optionalString(Inspector inspector) {
         if ( ! inspector.valid()) return Optional.empty();
         return Optional.of(inspector.asString());
     }
+
+    private static Optional<DockerImage> optionalDockerImage(Inspector inspector) {
+        if ( ! inspector.valid()) return Optional.empty();
+        return Optional.of(DockerImage.fromString(inspector.asString()));
+    }
+
 }
