@@ -1,41 +1,36 @@
-// Copyright 2017 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
+// Copyright Verizon Media. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.config.server.session;
 
+import com.yahoo.cloud.config.ConfigserverConfig;
 import com.yahoo.component.Version;
+import com.yahoo.concurrent.InThreadExecutorService;
 import com.yahoo.config.application.api.DeployLogger;
+import com.yahoo.config.application.api.FileRegistry;
 import com.yahoo.config.model.api.ContainerEndpoint;
 import com.yahoo.config.model.api.EndpointCertificateSecrets;
 import com.yahoo.config.model.application.provider.BaseDeployLogger;
 import com.yahoo.config.model.application.provider.FilesApplicationPackage;
 import com.yahoo.config.provision.ApplicationId;
 import com.yahoo.config.provision.ApplicationName;
-import com.yahoo.config.provision.Capacity;
 import com.yahoo.config.provision.CertificateNotReadyException;
-import com.yahoo.config.provision.ClusterSpec;
-import com.yahoo.config.provision.HostFilter;
-import com.yahoo.config.provision.HostSpec;
 import com.yahoo.config.provision.InstanceName;
-import com.yahoo.config.provision.ProvisionLogger;
-import com.yahoo.config.provision.Provisioner;
 import com.yahoo.config.provision.TenantName;
+import com.yahoo.config.provision.Zone;
 import com.yahoo.config.provision.exception.LoadBalancerServiceException;
 import com.yahoo.io.IOUtils;
-import com.yahoo.log.LogLevel;
 import com.yahoo.path.Path;
 import com.yahoo.security.KeyAlgorithm;
 import com.yahoo.security.KeyUtils;
 import com.yahoo.security.SignatureAlgorithm;
 import com.yahoo.security.X509CertificateBuilder;
 import com.yahoo.security.X509CertificateUtils;
-import com.yahoo.slime.Slime;
-import com.yahoo.transaction.NestedTransaction;
-import com.yahoo.vespa.config.server.MockReloadHandler;
+import com.yahoo.vespa.config.server.MockProvisioner;
 import com.yahoo.vespa.config.server.MockSecretStore;
-import com.yahoo.vespa.config.server.TestComponentRegistry;
+import com.yahoo.vespa.config.server.TestConfigDefinitionRepo;
 import com.yahoo.vespa.config.server.TimeoutBudgetTest;
 import com.yahoo.vespa.config.server.application.PermanentApplicationPackage;
-import com.yahoo.vespa.config.server.application.TenantApplications;
 import com.yahoo.vespa.config.server.deploy.DeployHandlerLogger;
+import com.yahoo.vespa.config.server.filedistribution.MockFileDistributionFactory;
 import com.yahoo.vespa.config.server.host.HostRegistry;
 import com.yahoo.vespa.config.server.http.InvalidApplicationException;
 import com.yahoo.vespa.config.server.model.TestModelFactory;
@@ -44,12 +39,15 @@ import com.yahoo.vespa.config.server.provision.HostProvisionerProvider;
 import com.yahoo.vespa.config.server.tenant.ContainerEndpointsCache;
 import com.yahoo.vespa.config.server.tenant.EndpointCertificateMetadataStore;
 import com.yahoo.vespa.config.server.tenant.EndpointCertificateRetriever;
-import com.yahoo.vespa.config.server.zookeeper.ConfigCurator;
+import com.yahoo.vespa.config.server.tenant.TenantRepository;
+import com.yahoo.vespa.config.server.zookeeper.ZKApplication;
+import com.yahoo.vespa.config.util.ConfigUtils;
 import com.yahoo.vespa.curator.mock.MockCurator;
 import com.yahoo.vespa.flags.InMemoryFlagSource;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
+import org.junit.rules.ExpectedException;
 import org.junit.rules.TemporaryFolder;
 
 import javax.security.auth.x500.X500Principal;
@@ -60,13 +58,15 @@ import java.security.KeyPair;
 import java.security.cert.X509Certificate;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.logging.Level;
 
+import static com.yahoo.vespa.config.server.session.SessionPreparer.PrepareResult;
+import static com.yahoo.vespa.config.server.session.SessionZooKeeperClient.APPLICATION_PACKAGE_REFERENCE_PATH;
 import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
@@ -78,33 +78,34 @@ import static org.junit.Assert.assertTrue;
  */
 public class SessionPreparerTest {
 
-    private static final Path tenantPath = Path.createRoot();
-    private static final Path sessionsPath = tenantPath.append("sessions").append("testapp");
     private static final File testApp = new File("src/test/apps/app");
     private static final File invalidTestApp = new File("src/test/apps/illegalApp");
     private static final Version version123 = new Version(1, 2, 3);
     private static final Version version321 = new Version(3, 2, 1);
-    private KeyPair keyPair = KeyUtils.generateKeypair(KeyAlgorithm.EC, 256);
-    private X509Certificate certificate = X509CertificateBuilder.fromKeypair(keyPair, new X500Principal("CN=subject"),
+    private static final Zone zone = Zone.defaultZone();
+    private final KeyPair keyPair = KeyUtils.generateKeypair(KeyAlgorithm.EC, 256);
+    private final X509Certificate certificate = X509CertificateBuilder.fromKeypair(keyPair, new X500Principal("CN=subject"),
             Instant.now(), Instant.now().plus(1, ChronoUnit.DAYS), SignatureAlgorithm.SHA512_WITH_ECDSA, BigInteger.valueOf(12345)).build();
-
     private final InMemoryFlagSource flagSource = new InMemoryFlagSource();
     private MockCurator curator;
-    private ConfigCurator configCurator;
     private SessionPreparer preparer;
-    private TestComponentRegistry componentRegistry;
-    private MockFileDistributionFactory fileDistributionFactory;
-    private MockSecretStore secretStore = new MockSecretStore();
+    private final MockSecretStore secretStore = new MockSecretStore();
+    private ConfigserverConfig configserverConfig;
 
     @Rule
     public TemporaryFolder folder = new TemporaryFolder();
 
+    @Rule
+    public ExpectedException expectedException = ExpectedException.none();
+
     @Before
-    public void setUp() {
+    public void setUp() throws IOException {
         curator = new MockCurator();
-        configCurator = ConfigCurator.create(curator);
-        componentRegistry = new TestComponentRegistry.Builder().curator(curator).build();
-        fileDistributionFactory = (MockFileDistributionFactory)componentRegistry.getFileDistributionFactory();
+        configserverConfig = new ConfigserverConfig.Builder()
+                .fileReferencesDir(folder.newFolder().getAbsolutePath())
+                .configServerDBDir(folder.newFolder().getAbsolutePath())
+                .configDefinitionsDir(folder.newFolder().getAbsolutePath())
+                .build();
         preparer = createPreparer();
     }
 
@@ -114,7 +115,7 @@ public class SessionPreparerTest {
 
     private SessionPreparer createPreparer(HostProvisionerProvider hostProvisionerProvider) {
         ModelFactoryRegistry modelFactoryRegistry =
-                new ModelFactoryRegistry(Arrays.asList(new TestModelFactory(version123), new TestModelFactory(version321)));
+                new ModelFactoryRegistry(List.of(new TestModelFactory(version123), new TestModelFactory(version321)));
         return createPreparer(modelFactoryRegistry, hostProvisionerProvider);
     }
 
@@ -122,13 +123,14 @@ public class SessionPreparerTest {
                                            HostProvisionerProvider hostProvisionerProvider) {
         return new SessionPreparer(
                 modelFactoryRegistry,
-                componentRegistry.getFileDistributionFactory(),
+                new MockFileDistributionFactory(configserverConfig),
+                new InThreadExecutorService(),
                 hostProvisionerProvider,
-                new PermanentApplicationPackage(componentRegistry.getConfigserverConfig()),
-                componentRegistry.getConfigserverConfig(),
-                componentRegistry.getStaticConfigDefinitionRepo(),
+                new PermanentApplicationPackage(configserverConfig),
+                configserverConfig,
+                new TestConfigDefinitionRepo(),
                 curator,
-                componentRegistry.getZone(),
+                zone,
                 flagSource,
                 secretStore);
     }
@@ -140,59 +142,99 @@ public class SessionPreparerTest {
 
     @Test
     public void require_that_application_validation_exception_is_ignored_if_forced() throws IOException {
-        prepare(invalidTestApp, new PrepareParams.Builder().ignoreValidationErrors(true).timeoutBudget(TimeoutBudgetTest.day()).build());
+        prepare(invalidTestApp,
+                new PrepareParams.Builder()
+                        .applicationId(applicationId())
+                        .ignoreValidationErrors(true)
+                        .timeoutBudget(TimeoutBudgetTest.day())
+                        .build(),
+                1);
     }
 
     @Test
     public void require_that_zookeeper_is_not_written_to_if_dryrun() throws IOException {
-        prepare(testApp, new PrepareParams.Builder().dryRun(true).timeoutBudget(TimeoutBudgetTest.day()).build());
-        assertFalse(configCurator.exists(sessionsPath.append(ConfigCurator.USERAPP_ZK_SUBPATH).append("services.xml").getAbsolute()));
+        long sessionId = 1;
+        prepare(testApp,
+                new PrepareParams.Builder()
+                .applicationId(applicationId())
+                        .dryRun(true)
+                        .timeoutBudget(TimeoutBudgetTest.day())
+                        .build(),
+                sessionId);
+        Path sessionPath = sessionPath(sessionId);
+        assertFalse(curator.exists(sessionPath.append(ZKApplication.USERAPP_ZK_SUBPATH).append("services.xml")));
     }
 
     @Test
     public void require_that_filedistribution_is_ignored_on_dryrun() throws IOException {
-        prepare(testApp, new PrepareParams.Builder().dryRun(true).timeoutBudget(TimeoutBudgetTest.day()).build());
-        assertThat(fileDistributionFactory.mockFileDistributionProvider.timesCalled, is(0));
+        long sessionId = 1;
+        PrepareResult result = prepare(testApp,
+                                       new PrepareParams.Builder()
+                                               .applicationId(applicationId())
+                                               .dryRun(true)
+                                               .build(),
+                                       sessionId);
+        Map<Version, FileRegistry> fileRegistries = result.getFileRegistries();
+        assertEquals(0, fileRegistries.get(version321).export().size());
     }
 
     @Test
     public void require_that_application_is_prepared() throws Exception {
         prepare(testApp);
-        assertThat(fileDistributionFactory.mockFileDistributionProvider.timesCalled, is(1)); // Only builds the newest version
-        assertTrue(configCurator.exists(sessionsPath.append(ConfigCurator.USERAPP_ZK_SUBPATH).append("services.xml").getAbsolute()));
+        assertTrue(curator.exists(sessionPath(1).append(ZKApplication.USERAPP_ZK_SUBPATH).append("services.xml")));
     }
 
     @Test(expected = InvalidApplicationException.class)
     public void require_exception_for_overlapping_host() throws IOException {
-        SessionContext ctx = getContext(getApplicationPackage(testApp));
-        ((HostRegistry<ApplicationId>)ctx.getHostValidator()).update(applicationId("foo"), Collections.singletonList("mytesthost"));
-        preparer.prepare(ctx, new BaseDeployLogger(), new PrepareParams.Builder().build(), Optional.empty(), tenantPath, Instant.now());
+        FilesApplicationPackage app = getApplicationPackage(testApp);
+        HostRegistry hostValidator = new HostRegistry();
+        hostValidator.update(applicationId("foo"), Collections.singletonList("mytesthost"));
+        preparer.prepare(hostValidator, new BaseDeployLogger(), new PrepareParams.Builder().applicationId(applicationId("default")).build(),
+                         Optional.empty(), Instant.now(), app.getAppDir(), app, createSessionZooKeeperClient());
     }
     
     @Test
     public void require_no_warning_for_overlapping_host_for_same_appid() throws IOException {
-        SessionContext ctx = getContext(getApplicationPackage(testApp));
-        ((HostRegistry<ApplicationId>)ctx.getHostValidator()).update(applicationId("default"), Collections.singletonList("mytesthost"));
         final StringBuilder logged = new StringBuilder();
         DeployLogger logger = (level, message) -> {
-            System.out.println(level + ": "+message);
-            if (level.equals(LogLevel.WARNING) && message.contains("The host mytesthost is already in use")) logged.append("ok");
+            if (level.equals(Level.WARNING) && message.contains("The host mytesthost is already in use")) logged.append("ok");
         };
-        preparer.prepare(ctx, logger, new PrepareParams.Builder().build(), Optional.empty(), tenantPath, Instant.now());
+        FilesApplicationPackage app = getApplicationPackage(testApp);
+        HostRegistry hostValidator = new HostRegistry();
+        ApplicationId applicationId = applicationId();
+        hostValidator.update(applicationId, Collections.singletonList("mytesthost"));
+        preparer.prepare(hostValidator, logger, new PrepareParams.Builder().applicationId(applicationId).build(),
+                         Optional.empty(), Instant.now(), app.getAppDir(), app,
+                         createSessionZooKeeperClient());
         assertEquals(logged.toString(), "");
     }
 
     @Test
     public void require_that_application_id_is_written_in_prepare() throws IOException {
+        PrepareParams params = new PrepareParams.Builder().applicationId(applicationId()).build();
+        int sessionId = 1;
+        prepare(testApp, params);
+        assertThat(createSessionZooKeeperClient(sessionId).readApplicationId().get(), is(applicationId()));
+    }
+
+    @Test
+    public void require_that_writing_wrong_application_id_fails() throws IOException {
         TenantName tenant = TenantName.from("tenant");
         ApplicationId origId = new ApplicationId.Builder()
-                               .tenant(tenant)
-                               .applicationName("foo").instanceName("quux").build();
+                .tenant(tenant)
+                .applicationName("foo")
+                .instanceName("quux")
+                .build();
         PrepareParams params = new PrepareParams.Builder().applicationId(origId).build();
+        expectedException.expect(RuntimeException.class);
+        expectedException.expectMessage("Error preparing session");
         prepare(testApp, params);
-        SessionZooKeeperClient zkc = new SessionZooKeeperClient(curator, sessionsPath);
-        assertTrue(configCurator.exists(sessionsPath.append(SessionZooKeeperClient.APPLICATION_ID_PATH).getAbsolute()));
-        assertThat(zkc.readApplicationId(), is(origId));
+    }
+
+    @Test
+    public void require_that_file_reference_of_application_package_is_written_to_zk() throws Exception {
+        prepare(testApp);
+        assertTrue(curator.exists(sessionPath(1).append(APPLICATION_PACKAGE_REFERENCE_PATH)));
     }
 
     @Test
@@ -234,30 +276,16 @@ public class SessionPreparerTest {
         var containerEndpointsFromModel = modelContext.properties().endpoints();
         assertEquals(Set.copyOf(expected), containerEndpointsFromModel);
 
-        // Writing empty container endpoints keeps old value
+        // Preparing with null container endpoints keeps old value. This is what happens when deployments happen from
+        // an existing session (e.g. internal redeployment).
         params = new PrepareParams.Builder().applicationId(applicationId).build();
         prepare(new File("src/test/resources/deploy/hosted-app"), params);
         assertEquals(expected, readContainerEndpoints(applicationId));
-    }
 
-    @Test
-    public void require_that_tlssecretkey_is_written() throws IOException {
-        var tlskey = "vespa.tlskeys.tenant1--app1";
-        var applicationId = applicationId("test");
-        var params = new PrepareParams.Builder().applicationId(applicationId).tlsSecretsKeyName(tlskey).build();
-
-        secretStore.put("vespa.tlskeys.tenant1--app1-cert", X509CertificateUtils.toPem(certificate));
-        secretStore.put("vespa.tlskeys.tenant1--app1-key", KeyUtils.toPem(keyPair.getPrivate()));
-
+        // Preparing with empty container endpoints clears endpoints
+        params = new PrepareParams.Builder().applicationId(applicationId).containerEndpoints("[]").build();
         prepare(new File("src/test/resources/deploy/hosted-app"), params);
-
-        // Read from zk and verify cert and key are available
-        Optional<EndpointCertificateSecrets> endpointCertificateSecrets = new EndpointCertificateMetadataStore(curator, tenantPath)
-                .readEndpointCertificateMetadata(applicationId)
-                .flatMap(p -> new EndpointCertificateRetriever(secretStore).readEndpointCertificateSecrets(p));
-        assertTrue(endpointCertificateSecrets.isPresent());
-        assertTrue(endpointCertificateSecrets.get().key().startsWith("-----BEGIN EC PRIVATE KEY"));
-        assertTrue(endpointCertificateSecrets.get().certificate().startsWith("-----BEGIN CERTIFICATE"));
+        assertEquals(List.of(), readContainerEndpoints(applicationId));
     }
 
     @Test
@@ -269,6 +297,7 @@ public class SessionPreparerTest {
         prepare(new File("src/test/resources/deploy/hosted-app"), params);
 
         // Read from zk and verify cert and key are available
+        Path tenantPath = TenantRepository.getTenantPath(applicationId.tenant());
         Optional<EndpointCertificateSecrets> endpointCertificateSecrets = new EndpointCertificateMetadataStore(curator, tenantPath)
                 .readEndpointCertificateMetadata(applicationId)
                 .flatMap(p -> new EndpointCertificateRetriever(secretStore).readEndpointCertificateSecrets(p));
@@ -279,48 +308,46 @@ public class SessionPreparerTest {
     }
 
     @Test(expected = CertificateNotReadyException.class)
-    public void require_that_tlssecretkey_is_missing_when_not_in_secretstore() throws IOException {
-        var tlskey = "vespa.tlskeys.tenant1--app1";
+    public void endpoint_certificate_is_missing_when_not_in_secretstore() throws IOException {
         var applicationId = applicationId("test");
-        var params = new PrepareParams.Builder().applicationId(applicationId).tlsSecretsKeyName(tlskey).build();
+        var params = new PrepareParams.Builder().applicationId(applicationId).endpointCertificateMetadata("{\"keyName\": \"vespa.tlskeys.tenant1--app1-key\", \"certName\":\"vespa.tlskeys.tenant1--app1-cert\", \"version\": 7}").build();
         prepare(new File("src/test/resources/deploy/hosted-app"), params);
     }
 
     @Test(expected = CertificateNotReadyException.class)
-    public void require_that_tlssecretkey_is_missing_when_certificate_not_in_secretstore() throws IOException {
+    public void endpoint_certificate_is_missing_when_certificate_not_in_secretstore() throws IOException {
         var tlskey = "vespa.tlskeys.tenant1--app1";
         var applicationId = applicationId("test");
-        var params = new PrepareParams.Builder().applicationId(applicationId).tlsSecretsKeyName(tlskey).build();
-        secretStore.put(tlskey+"-key", "KEY");
+        var params = new PrepareParams.Builder().applicationId(applicationId).endpointCertificateMetadata("{\"keyName\": \"vespa.tlskeys.tenant1--app1-key\", \"certName\":\"vespa.tlskeys.tenant1--app1-cert\", \"version\": 7}").build();
+        secretStore.put(tlskey+"-key", 7, "KEY");
         prepare(new File("src/test/resources/deploy/hosted-app"), params);
     }
 
     @Test(expected = LoadBalancerServiceException.class)
     public void require_that_conflict_is_returned_when_creating_load_balancer_fails() throws IOException {
-        preparer = createPreparer(HostProvisionerProvider.withProvisioner(new FailWithTransientExceptionProvisioner()));
+        preparer = createPreparer(HostProvisionerProvider.withProvisioner(new MockProvisioner().transientFailureOnPrepare(), true));
         var params = new PrepareParams.Builder().applicationId(applicationId("test")).build();
         prepare(new File("src/test/resources/deploy/hosted-app"), params);
     }
 
-    private List<ContainerEndpoint> readContainerEndpoints(ApplicationId application) {
-        return new ContainerEndpointsCache(tenantPath, curator).read(application);
+    private List<ContainerEndpoint> readContainerEndpoints(ApplicationId applicationId) {
+        Path tenantPath = TenantRepository.getTenantPath(applicationId.tenant());
+        return new ContainerEndpointsCache(tenantPath, curator).read(applicationId);
     }
 
     private void prepare(File app) throws IOException {
-        prepare(app, new PrepareParams.Builder().build());
+        prepare(app, new PrepareParams.Builder().applicationId(applicationId()).build());
     }
 
     private void prepare(File app, PrepareParams params) throws IOException {
-        preparer.prepare(getContext(getApplicationPackage(app)), getLogger(), params, Optional.empty(), tenantPath, Instant.now());
+        prepare(app, params, 1);
     }
 
-    private SessionContext getContext(FilesApplicationPackage app) throws IOException {
-        return new SessionContext(app,
-                                  new SessionZooKeeperClient(curator, sessionsPath),
-                                  app.getAppDir(),
-                                  TenantApplications.create(componentRegistry, new MockReloadHandler(), TenantName.from("tenant")),
-                                  new HostRegistry<>(),
-                                  flagSource);
+    private PrepareResult prepare(File app, PrepareParams params, long sessionId) throws IOException {
+        FilesApplicationPackage applicationPackage = getApplicationPackage(app);
+        return preparer.prepare(new HostRegistry(), getLogger(), params,
+                                Optional.empty(), Instant.now(), applicationPackage.getAppDir(),
+                                applicationPackage, createSessionZooKeeperClient(sessionId));
     }
 
     private FilesApplicationPackage getApplicationPackage(File testFile) throws IOException {
@@ -330,8 +357,13 @@ public class SessionPreparerTest {
     }
 
     private DeployHandlerLogger getLogger() {
-        return new DeployHandlerLogger(new Slime().get(), false /*verbose */,
-                                       new ApplicationId.Builder().tenant("testtenant").applicationName("testapp").build());
+        return DeployHandlerLogger.forApplication(
+                new ApplicationId.Builder().tenant("testtenant").applicationName("testapp").build(), false /*verbose */);
+    }
+
+
+    private ApplicationId applicationId() {
+        return ApplicationId.from(TenantName.defaultName(), ApplicationName.from("default"), InstanceName.defaultName());
     }
 
     private ApplicationId applicationId(String applicationName) {
@@ -339,22 +371,19 @@ public class SessionPreparerTest {
                                   ApplicationName.from(applicationName), InstanceName.defaultName());
     }
 
-    private static class FailWithTransientExceptionProvisioner implements Provisioner {
+    private SessionZooKeeperClient createSessionZooKeeperClient() {
+        return createSessionZooKeeperClient(1);
+    }
 
-        @Override
-        public List<HostSpec> prepare(ApplicationId applicationId, ClusterSpec cluster, Capacity capacity, int groups, ProvisionLogger logger) {
-            throw new LoadBalancerServiceException("Unable to create load balancer", new Exception("some internal exception"));
-        }
+    private SessionZooKeeperClient createSessionZooKeeperClient(long sessionId) {
+        return new SessionZooKeeperClient(curator,
+                                          applicationId().tenant(),
+                                          sessionId,
+                                          ConfigUtils.getCanonicalHostName());
+    }
 
-        @Override
-        public void activate(NestedTransaction transaction, ApplicationId application, Collection<HostSpec> hosts) { }
-
-        @Override
-        public void remove(NestedTransaction transaction, ApplicationId application) { }
-
-        @Override
-        public void restart(ApplicationId application, HostFilter filter) { }
-
+    private Path sessionPath(long sessionId) {
+        return TenantRepository.getSessionsPath(applicationId().tenant()).append(String.valueOf(sessionId));
     }
 
 }
