@@ -1,16 +1,14 @@
 // Copyright 2017 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.search.federation.sourceref;
 
-import static com.yahoo.container.util.Util.quote;
+import com.yahoo.component.ComponentSpecification;
+import com.yahoo.prelude.IndexFacts;
+import com.yahoo.processing.request.Properties;
 
 import java.util.Arrays;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
-
-import com.yahoo.component.ComponentSpecification;
-import com.yahoo.prelude.IndexFacts;
-import com.yahoo.processing.request.Properties;
 
 /**
  * Maps a source reference to search chain invocation specs.
@@ -24,13 +22,12 @@ public class SourceRefResolver {
     public SourceRefResolver(SearchChainResolver searchChainResolver) {
         this.searchChainResolver = searchChainResolver;
     }
+
     public Set<SearchChainInvocationSpec> resolve(ComponentSpecification sourceRef,
                                                   Properties sourceToProviderMap,
-                                                  IndexFacts indexFacts)
-            throws UnresolvedSearchChainException {
-
+                                                  IndexFacts indexFacts) throws UnresolvedSearchChainException {
         try {
-            return new LinkedHashSet<>(Arrays.asList(searchChainResolver.resolve(sourceRef, sourceToProviderMap)));
+            return new LinkedHashSet<>(List.of(searchChainResolver.resolve(sourceRef, sourceToProviderMap)));
         } catch (UnresolvedSourceRefException e) {
             return resolveClustersWithDocument(sourceRef, sourceToProviderMap, indexFacts);
         }
@@ -65,9 +62,9 @@ public class SourceRefResolver {
             return searchChainResolver.resolve(new ComponentSpecification(cluster), sourceToProviderMap);
         }
         catch (UnresolvedSearchChainException e) {
-            throw new UnresolvedSearchChainException("Failed to resolve cluster search chain " + quote(cluster) +
-                                                     " when using source ref " + quote(sourceRef) +
-                                                     " as a document name.");
+            throw new UnresolvedSearchChainException("Failed to resolve cluster search chain '" + cluster +
+                                                     "' when using source ref '" + sourceRef +
+                                                     "' as a document name.");
         }
     }
 
