@@ -2,11 +2,9 @@
 package com.yahoo.search.query.profile;
 
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 
 /**
  * An immutable, binding of a list of dimensions to dimension values
@@ -22,25 +20,25 @@ public class DimensionBinding {
     private DimensionValues values;
 
     /** The binding from those dimensions to values, and possibly other values */
-    private Map<String, String> context; // TODO: This is not needed any more
+    private Map<String, String> context;
 
     public static final DimensionBinding nullBinding =
-        new DimensionBinding(Collections.unmodifiableList(Collections.emptyList()), DimensionValues.empty, null);
+        new DimensionBinding(List.of(), DimensionValues.empty, null);
 
     public static final DimensionBinding invalidBinding =
-        new DimensionBinding(Collections.unmodifiableList(Collections.emptyList()), DimensionValues.empty, null);
+        new DimensionBinding(List.of(), DimensionValues.empty, null);
 
     /** Whether the value array contains only nulls */
-    private boolean containsAllNulls;
+    private final boolean containsAllNulls;
 
     // NOTE: Map must be ordered
-    public static DimensionBinding createFrom(Map<String,String> values) {
+    public static DimensionBinding createFrom(Map<String, String> values) {
         return createFrom(new ArrayList<>(values.keySet()), values);
     }
 
     /** Creates a binding from a variant and a context. Any of the arguments may be null. */
     // NOTE: Map must be ordered
-    public static DimensionBinding createFrom(List<String> dimensions, Map<String,String> context) {
+    public static DimensionBinding createFrom(List<String> dimensions, Map<String, String> context) {
         if (dimensions == null || dimensions.size() == 0) {
             if (context == null) return nullBinding;
             if (dimensions == null) return new DimensionBinding(null, DimensionValues.empty, context); // Null, but must preserve context
@@ -51,7 +49,7 @@ public class DimensionBinding {
 
     /** Creates a binding from a variant and a context. Any of the arguments may be null. */
     public static DimensionBinding createFrom(List<String> dimensions, DimensionValues dimensionValues) {
-        if (dimensionValues==null || dimensionValues == DimensionValues.empty) return nullBinding;
+        if (dimensionValues == null || dimensionValues == DimensionValues.empty) return nullBinding;
 
         // If null, preserve raw material for creating a context later (in createFor)
         if (dimensions == null) return new DimensionBinding(null, dimensionValues, null);
@@ -61,14 +59,13 @@ public class DimensionBinding {
 
     /** Returns a binding for a (possibly) new set of variants. Variants may be null, but not bindings */
     public DimensionBinding createFor(List<String> newDimensions) {
-        if (newDimensions==null) return this; // Note: Not necessarily null - if no new variants then keep the existing binding
-        // if (this.context==null && values.length==0) return nullBinding; // No data from which to create a non-null binding
-        if (this.dimensions==newDimensions) return this; // Avoid creating a new object if the dimensions are the same
+        if (newDimensions == null) return this; // Note: Not necessarily null - if no new variants then keep the existing binding
+        if (this.dimensions == newDimensions) return this; // Avoid creating a new object if the dimensions are the same
 
-        Map<String,String> context=this.context;
-        if (context==null)
-            context=this.values.asContext(this.dimensions !=null ? this.dimensions : newDimensions);
-        return new DimensionBinding(newDimensions,extractDimensionValues(newDimensions,context),context);
+        Map<String,String> context = this.context;
+        if (context == null)
+            context = this.values.asContext(this.dimensions != null ? this.dimensions : newDimensions);
+        return new DimensionBinding(newDimensions, extractDimensionValues(newDimensions, context), context);
     }
 
     /**
@@ -76,20 +73,20 @@ public class DimensionBinding {
      * The array will not be modified. The context is needed in order to convert this binding to another
      * given another set of variant dimensions.
      */
-    private DimensionBinding(List<String> dimensions, DimensionValues values, Map<String,String> context) {
-        this.dimensions=dimensions;
-        this.values=values;
+    private DimensionBinding(List<String> dimensions, DimensionValues values, Map<String, String> context) {
+        this.dimensions = dimensions;
+        this.values = values;
         this.context = context;
-        containsAllNulls=values.isEmpty();
+        containsAllNulls = values.isEmpty();
     }
 
     /** Returns a read-only list of the dimensions of this. This value is undefined if this isNull() */
     public List<String> getDimensions() { return dimensions; }
 
     /** Returns a context created from the dimensions and values of this */
-    public Map<String,String> getContext() {
-        if (context !=null) return context;
-        context =values.asContext(dimensions);
+    public Map<String, String> getContext() {
+        if (context != null) return context;
+        context = values.asContext(dimensions);
         return context;
     }
 
@@ -102,7 +99,7 @@ public class DimensionBinding {
     public DimensionValues getValues() { return values; }
 
     /** Returns true only if this binding is null (contains no values for its dimensions (if any) */
-    public boolean isNull() { return dimensions==null || containsAllNulls; }
+    public boolean isNull() { return dimensions == null || containsAllNulls; }
 
     /**
      * Returns an array of the dimension values corresponding to the dimensions of this from the given context,
@@ -110,10 +107,10 @@ public class DimensionBinding {
      * Dimensions which are not set in this context get a null value.
      */
     private static DimensionValues extractDimensionValues(List<String> dimensions, Map<String,String> context) {
-        String[] dimensionValues=new String[dimensions.size()];
-        if (context==null || context.size()==0) return DimensionValues.createFrom(dimensionValues);
-        for (int i=0; i<dimensions.size(); i++)
-            dimensionValues[i]=context.get(dimensions.get(i));
+        String[] dimensionValues = new String[dimensions.size()];
+        if (context == null || context.size() == 0) return DimensionValues.createFrom(dimensionValues);
+        for (int i = 0; i < dimensions.size(); i++)
+            dimensionValues[i] = context.get(dimensions.get(i));
         return DimensionValues.createFrom(dimensionValues);
     }
 
@@ -127,86 +124,57 @@ public class DimensionBinding {
      *
      * @return the combined binding, or the special invalidBinding if these two bindings are incompatible
      */
-    public DimensionBinding combineWith(DimensionBinding binding) {
-        List<String> combinedDimensions = combineDimensions(getDimensions(), binding.getDimensions());
-        if (combinedDimensions == null) return invalidBinding;
+    public DimensionBinding combineWith(DimensionBinding other) {
+        List<String> d1 = getDimensions();
+        List<String> d2 = other.getDimensions();
+        DimensionValues v1 = getValues();
+        DimensionValues v2 = other.getValues();
+        List<String> dimensions = new ArrayList<>();
+        List<String> values = new ArrayList<>();
+        int i1 = 0, i2 = 0;
+        while (i1 < d1.size() && i2 < d2.size()) {
+            if (d1.get(i1).equals(d2.get(i2))) { // agreement on next dimension
+                String s1 = v1.get(i1), s2 = v2.get(i2);
+                if (s1 == null)
+                    values.add(s2);
+                else if (s2 == null || s1.equals(s2))
+                    values.add(s1);
+                else
+                    return invalidBinding; // disagreement on next value
 
-        // not runtime, so assume we don't need to preserve values outside the dimensions
-        Map<String, String> combinedValues = combineValues(getContext(), binding.getContext());
-        if (combinedValues == null) return invalidBinding;
-
-        return DimensionBinding.createFrom(combinedDimensions, combinedValues);
-    }
-
-    /** Returns the binding of this (dimension->value) as a map */
-    private Map<String, String> asMap() {
-        Map<String, String> map = new LinkedHashMap<>();
-        for (int i = 0; i < Math.min(dimensions.size(), values.size()); i++) {
-            if (values.getValues()[i] != null)
-                map.put(dimensions.get(i), values.getValues()[i]);
-        }
-        return map;
-    }
-
-    /**
-     * Returns a combined list of dimensions from two separate lists,
-     * or null if they are incompatible.
-     * This is to combine two lists to one such that the partial order in both is preserved
-     * (or return null if impossible).
-     */
-    private List<String> combineDimensions(List<String> d1, List<String> d2) {
-        List<String> combined = new ArrayList<>();
-        int d1Index = 0, d2Index=0;
-        while (d1Index < d1.size() && d2Index < d2.size()) {
-            if (d1.get(d1Index).equals(d2.get(d2Index))) { // agreement on next element
-                combined.add(d1.get(d1Index));
-                d1Index++;
-                d2Index++;
+                dimensions.add(d1.get(i1));
+                i1++;
+                i2++;
             }
-            else if ( ! d2.contains(d1.get(d1Index))) { // next in d1 is independent from d2
-                combined.add(d1.get(d1Index++));
+            else if ( ! d2.contains(d1.get(i1))) { // next dimension in d1 is independent from d2
+                dimensions.add(d1.get(i1));
+                values.add(v1.get(i1));
+                i1++;
             }
-            else if ( ! d1.contains(d2.get(d2Index))) { // next in d2 is independent from d1
-                combined.add(d2.get(d2Index++));
+            else if ( ! d1.contains(d2.get(i2))) { // next dimension in d2 is independent from d1
+                dimensions.add(d2.get(i2));
+                values.add(v2.get(i2));
+                i2++;
             }
             else {
-                return null; // no independent and no agreement
+                return invalidBinding; // not independent and no agreement
             }
         }
-        if (d1Index < d1.size())
-            combined.addAll(d1.subList(d1Index, d1.size()));
-        else if (d2Index < d2.size())
-            combined.addAll(d2.subList(d2Index, d2.size()));
-
-        return combined;
-    }
-
-    /**
-     * Returns a combined map of dimension values from two separate maps,
-     * or null if they are incompatible.
-     */
-    private Map<String, String> combineValues(Map<String, String> m1, Map<String, String> m2) {
-        Map<String, String> combinedValues = new LinkedHashMap<>(m1);
-        for (Map.Entry<String, String> m2Entry : m2.entrySet()) {
-            if (m2Entry.getValue() == null) continue;
-            String m1Value = m1.get(m2Entry.getKey());
-            if (m1Value != null && ! m1Value.equals(m2Entry.getValue()))
-                return null; // conflicting values of a key
-            combinedValues.put(m2Entry.getKey(), m2Entry.getValue());
+        while (i1 < d1.size()) {
+            dimensions.add(d1.get(i1));
+            values.add(v1.get(i1));
+            i1++;
         }
-        return combinedValues;
+        while (i2 < d2.size()) {
+            dimensions.add(d2.get(i2));
+            values.add(v2.get(i2));
+            i2++;
+        }
+
+        return DimensionBinding.createFrom(dimensions, DimensionValues.createFrom(values.toArray(new String[0])));
     }
 
-    private boolean intersects(List<String> l1, List<String> l2) {
-        for (String l1Item : l1)
-            if (l2.contains(l1Item))
-                return true;
-        return false;
-    }
-
-    /**
-     * Returns true if <code>this == invalidBinding</code>
-     */
+    /** Returns true if this == invalidBinding */
     public boolean isInvalid() { return this == invalidBinding; }
 
     @Override
@@ -226,7 +194,7 @@ public class DimensionBinding {
     /** Two bindings are equal if they contain the same dimensions and the same non-null values */
     @Override
     public boolean equals(Object o) {
-        if (o==this) return true;
+        if (o == this) return true;
         if (! (o instanceof DimensionBinding)) return false;
         DimensionBinding other = (DimensionBinding)o;
         if ( ! this.dimensions.equals(other.dimensions)) return false;
@@ -236,7 +204,7 @@ public class DimensionBinding {
 
     @Override
     public int hashCode() {
-        return dimensions.hashCode() + 17 * values.hashCode();
+        return Objects.hash(dimensions, values);
     }
 
 }
