@@ -6,11 +6,13 @@ import com.yahoo.search.query.profile.DimensionBinding;
 import com.yahoo.search.query.profile.SubstituteString;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 
 /**
@@ -20,20 +22,22 @@ import java.util.Set;
  */
 public class DimensionalValue<VALUE> {
 
-    private final List<Value<VALUE>> values;
+    private final Map<Binding, VALUE> indexedVariants;
+    private final List<BindingSpec> bindingSpecs;
 
-    /** Create a set of variants which is a single value regardless of dimensions */
-    public DimensionalValue(Value<VALUE> value) {
-        this.values = Collections.singletonList(value);
-    }
+    private DimensionalValue(List<Value<VALUE>> variants) {
+        Collections.sort(variants);
 
-    public DimensionalValue(List<Value<VALUE>> valueVariants) {
-        if (valueVariants.size() == 1) { // special cased for efficiency
-            this.values = Collections.singletonList(valueVariants.get(0));
-        }
-        else {
-            this.values = new ArrayList<>(valueVariants);
-            Collections.sort(this.values);
+        // If there are inconsistent definitions of the same property, we should pick the first in the sort order
+        this.indexedVariants = new HashMap<>();
+        for (Value<VALUE> variant : variants)
+            indexedVariants.putIfAbsent(variant.binding(), variant.value());
+
+        this.bindingSpecs = new ArrayList<>();
+        for (Value<VALUE> variant : variants) {
+            BindingSpec spec = new BindingSpec(variant.binding());
+            if ( ! bindingSpecs.contains(spec))
+                bindingSpecs.add(spec);
         }
     }
 
@@ -41,27 +45,30 @@ public class DimensionalValue<VALUE> {
     public VALUE get(Map<String, String> context) {
         if (context == null)
             context = Collections.emptyMap();
-        for (Value<VALUE> value : values) {
-            if (value.matches(context))
-                return value.value();
+
+        for (BindingSpec spec : bindingSpecs) {
+            if ( ! spec.matches(context)) continue;
+            VALUE value = indexedVariants.get(new Binding(spec, context));
+            if (value != null)
+                return value;
         }
         return null;
     }
 
-    public boolean isEmpty() { return values.isEmpty(); }
+    public boolean isEmpty() { return indexedVariants.isEmpty(); }
 
     @Override
     public String toString() {
-        return values.toString();
+        return indexedVariants.toString();
     }
 
     public static class Builder<VALUE> {
 
-        /** The minimal set of variants needed to capture all values at this key */
-        private Map<VALUE, Value.Builder<VALUE>> buildableVariants = new HashMap<>();
+        /** The variants of the value of this key */
+        private final Map<VALUE, Value.Builder<VALUE>> buildableVariants = new HashMap<>();
 
         /** Returns the value for the given binding, or null if none */
-        public VALUE valueFor(DimensionBinding variantBinding) {
+        public VALUE valueFor(Binding variantBinding) {
             for (var entry : buildableVariants.entrySet()) {
                 if (entry.getValue().variants.contains(variantBinding))
                     return entry.getKey();
@@ -69,34 +76,36 @@ public class DimensionalValue<VALUE> {
             return null;
         }
 
-        public void add(VALUE value, DimensionBinding variantBinding) {
+        public void add(VALUE value, Binding variantBinding) {
             // Note: We know we can index by the value because its possible types are constrained
-            // to what query profiles allow: String, primitives and query profiles
-            Value.Builder variant = buildableVariants.get(value);
-            if (variant == null) {
-                variant = new Value.Builder<>(value);
-                buildableVariants.put(value, variant);
-            }
-            variant.addVariant(variantBinding);
+            // to what query profiles allow: String, primitives and query profiles (wrapped as a ValueWithSource)
+            buildableVariants.computeIfAbsent(value, Value.Builder::new)
+                             .addVariant(variantBinding, value);
         }
 
-        public DimensionalValue<VALUE> build(Map<?, DimensionalValue.Builder<VALUE>> entries) {
-            List<Value> variants = new ArrayList<>();
-            for (Value.Builder buildableVariant : buildableVariants.values()) {
+        public DimensionalValue<VALUE> build(Map<CompoundName, DimensionalValue.Builder<VALUE>> entries) {
+            List<Value<VALUE>> variants = new ArrayList<>();
+            if (buildableVariants.size() == 1) {
+                // Compact size 1 as it is common and easy to do. To compact size > 1 we would need to
+                // compact within generic intervals having the same value
+                for (Value.Builder<VALUE> buildableVariant : buildableVariants.values())
+                    buildableVariant.compact();
+            }
+            for (Value.Builder<VALUE> buildableVariant : buildableVariants.values()) {
                 variants.addAll(buildableVariant.build(entries));
             }
-            return new DimensionalValue(variants);
+            return new DimensionalValue<>(variants);
         }
 
     }
 
     /** A value for a particular binding */
-    private static class Value<VALUE> implements Comparable<Value> {
+    private static class Value<VALUE> implements Comparable<Value<VALUE>> {
 
-        private VALUE value = null;
+        private final VALUE value;
 
         /** The minimal binding this holds for */
-        private Binding binding = null;
+        private final Binding binding;
 
         public Value(VALUE value, Binding binding) {
             this.value = value;
@@ -126,40 +135,78 @@ public class DimensionalValue<VALUE> {
             return " value '" + value + "' for " + binding;
         }
 
-        /**
-         * A single value with the minimal set of dimension combinations it holds for.
-         */
         private static class Builder<VALUE> {
 
-            private final VALUE value;
+            private VALUE value;
 
             /**
              * The set of bindings this value is for.
              * Some of these are more general versions of others.
              * We need to keep both to allow interleaving a different value with medium generality.
              */
-            private Set<DimensionBinding> variants = new HashSet<>();
+            private List<Binding> variants = new ArrayList<>();
 
             public Builder(VALUE value) {
                 this.value = value;
             }
 
             /** Add a binding this holds for */
-            public void addVariant(DimensionBinding binding) {
+            @SuppressWarnings("unchecked")
+            public void addVariant(Binding binding, VALUE newValue) {
                 variants.add(binding);
+
+                // We're combining values for efficiency, so remove incorrect provenance info
+                if (value instanceof ValueWithSource) {
+                    ValueWithSource v1 = (ValueWithSource)value;
+                    ValueWithSource v2 = (ValueWithSource)newValue;
+
+                    if (v1.source() != null && ! v1.source().equals(v2.source()))
+                        v1 = v1.withSource(null);
+
+                    // We could keep the more general variant here (when matching), but that situation is rare
+                    if (v1.variant().isPresent() && ! v1.variant().equals(v2.variant()))
+                        v1 = v1.withVariant(Optional.empty());
+
+                    value = (VALUE)v1;
+                }
+            }
+
+            /** Remove variants that are specializations of other variants in this */
+            void compact() {
+                Collections.sort(variants);
+                List<Binding> compacted = new ArrayList<>();
+
+                if (variants.get(variants.size() - 1).dimensions().length == 0) { // Shortcut
+                    variants = List.of(variants.get(variants.size() - 1));
+                }
+                else {
+                    for (int i = variants.size() - 1; i >= 0; i--) {
+                        if ( ! containsGeneralizationOf(variants.get(i), compacted))
+                            compacted.add(variants.get(i));
+                    }
+                    Collections.reverse(compacted);
+                    variants = compacted;
+                }
+            }
+
+            private boolean containsGeneralizationOf(Binding binding, List<Binding> bindings) {
+                for (Binding candidate : bindings) {
+                    if (candidate.generalizes(binding))
+                        return true;
+                }
+                return false;
             }
 
             /** Build a separate value object for each dimension combination which has this value */
             public List<Value<VALUE>> build(Map<CompoundName, DimensionalValue.Builder<VALUE>> entries) {
-                // Shortcut for efficiency of the normal case
-                if (variants.size() == 1) {
-                    return Collections.singletonList(new Value<>(substituteIfRelative(value, variants.iterator().next(), entries),
-                                                                 Binding.createFrom(variants.iterator().next())));
+                if (variants.size() == 1) { // Shortcut
+                    return List.of(new Value<>(substituteIfRelative(value, variants.iterator().next(), entries),
+                                               variants.iterator().next()));
                 }
 
                 List<Value<VALUE>> values = new ArrayList<>(variants.size());
-                for (DimensionBinding variant : variants) {
-                    values.add(new Value<>(substituteIfRelative(value, variant, entries), Binding.createFrom(variant)));
+                for (Binding variant : variants) {
+                    values.add(new Value<>(substituteIfRelative(value, variant, entries), variant));
                 }
                 return values;
             }
@@ -171,7 +218,7 @@ public class DimensionalValue<VALUE> {
             // TODO: Move this
             @SuppressWarnings("unchecked")
             private VALUE substituteIfRelative(VALUE value,
-                                               DimensionBinding variant,
+                                               Binding variant,
                                                Map<CompoundName, DimensionalValue.Builder<VALUE>> entries) {
                 if (value instanceof ValueWithSource && ((ValueWithSource)value).value() instanceof SubstituteString) {
                     ValueWithSource valueWithSource = (ValueWithSource)value;
@@ -185,7 +232,7 @@ public class DimensionalValue<VALUE> {
                                 if (substituteValues == null)
                                     throw new IllegalArgumentException("Could not resolve local substitution '" +
                                                                        relativeComponent.fieldName() + "' in variant " +
-                                                                       variant);
+                                                                       Arrays.toString(variant.dimensionValues()));
                                 ValueWithSource resolved = (ValueWithSource)substituteValues.valueFor(variant);
                                 resolvedComponents.add(new SubstituteString.StringComponent(resolved.value().toString()));
                             }
@@ -208,6 +255,40 @@ public class DimensionalValue<VALUE> {
                 return null;
             }
 
+        }
+
+    }
+
+    /** A list of dimensions for which there exist one or more bindings in this */
+    static class BindingSpec {
+
+        /** The dimensions of this. Unenforced invariant: Content never changes. */
+        private final String[] dimensions;
+
+        public BindingSpec(Binding binding) {
+            this.dimensions = binding.dimensions();
+        }
+
+        /** Do not change the returned array */
+        String[] dimensions() { return dimensions; }
+
+        /** Returns whether this context contains all the keys of this */
+        public boolean matches(Map<String, String> context) {
+            for (int i = 0; i < dimensions.length; i++)
+                if ( ! context.containsKey(dimensions[i])) return false;
+            return true;
+        }
+
+        @Override
+        public int hashCode() {
+            return Arrays.hashCode(dimensions);
+        }
+
+        @Override
+        public boolean equals(Object other) {
+            if (other == this) return true;
+            if ( ! (other instanceof BindingSpec)) return false;
+            return Arrays.equals(((BindingSpec)other).dimensions, this.dimensions);
         }
 
     }
