@@ -1,25 +1,15 @@
 // Copyright 2019 Oath Inc. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.hosted.controller.versions;
 
-import com.google.common.collect.ArrayListMultimap;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ListMultimap;
 import com.yahoo.component.Version;
 import com.yahoo.config.provision.HostName;
-import com.yahoo.log.LogLevel;
 import com.yahoo.vespa.hosted.controller.Controller;
-import com.yahoo.vespa.hosted.controller.Instance;
+import com.yahoo.vespa.hosted.controller.api.integration.configserver.NodeFilter;
 import com.yahoo.vespa.hosted.controller.application.ApplicationList;
-import com.yahoo.vespa.hosted.controller.application.Deployment;
 import com.yahoo.vespa.hosted.controller.application.SystemApplication;
-import com.yahoo.vespa.hosted.controller.deployment.DeploymentStatus;
-import com.yahoo.vespa.hosted.controller.deployment.DeploymentStatusList;
-import com.yahoo.vespa.hosted.controller.deployment.JobStatus;
-import com.yahoo.vespa.hosted.controller.deployment.RunStatus;
 import com.yahoo.vespa.hosted.controller.maintenance.SystemUpgrader;
 
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -45,11 +35,11 @@ public class VersionStatus {
 
     private static final Logger log = Logger.getLogger(VersionStatus.class.getName());
 
-    private final ImmutableList<VespaVersion> versions;
+    private final List<VespaVersion> versions;
     
     /** Create a version status. DO NOT USE: Public for testing and serialization only */
     public VersionStatus(List<VespaVersion> versions) {
-        this.versions = ImmutableList.copyOf(versions);
+        this.versions = List.copyOf(versions);
     }
 
     /** Returns the current version of controllers in this system */
@@ -85,29 +75,39 @@ public class VersionStatus {
         return versions.stream().filter(v -> v.versionNumber().equals(version)).findFirst().orElse(null);
     }
 
+    /** Returns whether given version is active in this system */
+    public boolean isActive(Version version) {
+        return version(version) != null;
+    }
+
     /** Create the empty version status */
-    public static VersionStatus empty() { return new VersionStatus(ImmutableList.of()); }
+    public static VersionStatus empty() { return new VersionStatus(List.of()); }
 
     /** Create a full, updated version status. This is expensive and should be done infrequently */
     public static VersionStatus compute(Controller controller) {
-        var systemApplicationVersions = findSystemApplicationVersions(controller);
-        var controllerVersions = findControllerVersions(controller);
+        VersionStatus versionStatus = controller.readVersionStatus();
+        List<NodeVersion> systemApplicationVersions = findSystemApplicationVersions(controller, versionStatus);
+        Map<ControllerVersion, List<HostName>> controllerVersions = findControllerVersions(controller);
 
-        var infrastructureVersions = ArrayListMultimap.<Version, HostName>create();
-        for (var kv : controllerVersions.asMap().entrySet()) {
-            infrastructureVersions.putAll(kv.getKey().version(), kv.getValue());
+        Map<Version, List<HostName>> infrastructureVersions = new HashMap<>();
+        for (var kv : controllerVersions.entrySet()) {
+            infrastructureVersions.computeIfAbsent(kv.getKey().version(), (k) -> new ArrayList<>())
+                                  .addAll(kv.getValue());
         }
-        infrastructureVersions.putAll(systemApplicationVersions.asVersionMap());
+        for (var nodeVersion : systemApplicationVersions) {
+            infrastructureVersions.computeIfAbsent(nodeVersion.currentVersion(), (k) -> new ArrayList<>())
+                                  .add(nodeVersion.hostname());
+        }
 
         // The system version is the oldest infrastructure version, if that version is newer than the current system
         // version
         Version newSystemVersion = infrastructureVersions.keySet().stream().min(Comparator.naturalOrder()).get();
-        Version systemVersion = controller.versionStatus().systemVersion()
-                                          .map(VespaVersion::versionNumber)
-                                          .orElse(newSystemVersion);
+        Version systemVersion = versionStatus.systemVersion()
+                                             .map(VespaVersion::versionNumber)
+                                             .orElse(newSystemVersion);
         if (newSystemVersion.isBefore(systemVersion)) {
             log.warning("Refusing to lower system version from " +
-                        controller.systemVersion() +
+                        systemVersion +
                         " to " +
                         newSystemVersion +
                         ", nodes on " + newSystemVersion + ": " +
@@ -119,8 +119,9 @@ public class VersionStatus {
         }
 
 
-        var deploymentStatistics = computeDeploymentStatistics(infrastructureVersions.keySet(),
-                                                               controller.jobController().deploymentStatuses(ApplicationList.from(controller.applications().asList())));
+        List<DeploymentStatistics> deploymentStatistics = DeploymentStatistics.compute(infrastructureVersions.keySet(),
+                                                                                       controller.jobController().deploymentStatuses(ApplicationList.from(controller.applications().asList())
+                                                                                                                                                    .withProjectId()));
         List<VespaVersion> versions = new ArrayList<>();
         List<Version> releasedVersions = controller.mavenRepository().metadata().versions();
 
@@ -129,12 +130,16 @@ public class VersionStatus {
 
             try {
                 boolean isReleased = Collections.binarySearch(releasedVersions, statistics.version()) >= 0;
+                List<NodeVersion> nodeVersions = systemApplicationVersions.stream()
+                                                                          .filter(nodeVersion -> nodeVersion.currentVersion().equals(statistics.version()))
+                                                                          .collect(Collectors.toList());
                 VespaVersion vespaVersion = createVersion(statistics,
                                                           controllerVersions.keySet(),
                                                           systemVersion,
                                                           isReleased,
-                                                          systemApplicationVersions.matching(statistics.version()),
-                                                          controller);
+                                                          nodeVersions,
+                                                          controller,
+                                                          versionStatus);
                 versions.add(vespaVersion);
             } catch (IllegalArgumentException e) {
                 log.log(Level.WARNING, "Unable to create VespaVersion for version " +
@@ -147,103 +152,61 @@ public class VersionStatus {
         return new VersionStatus(versions);
     }
 
-    private static NodeVersions findSystemApplicationVersions(Controller controller) {
-        var nodeVersions = controller.versionStatus().systemVersion()
-                                     .map(VespaVersion::nodeVersions)
-                                     .orElse(NodeVersions.EMPTY);
-        var newNodeVersions = new ArrayList<NodeVersion>();
+    private static List<NodeVersion> findSystemApplicationVersions(Controller controller, VersionStatus versionStatus) {
+        List<NodeVersion> nodeVersions = new ArrayList<>();
         for (var zone : controller.zoneRegistry().zones().controllerUpgraded().zones()) {
-            for (var application : SystemApplication.all()) {
+            for (var application : SystemApplication.notController()) {
                 var nodes = controller.serviceRegistry().configServer().nodeRepository()
-                                      .list(zone.getId(), application.id()).stream()
+                                      .list(zone.getId(), NodeFilter.all().applications(application.id())).stream()
                                       .filter(SystemUpgrader::eligibleForUpgrade)
                                       .collect(Collectors.toList());
                 if (nodes.isEmpty()) continue;
-                var configConverged = application.configConvergedIn(zone.getId(), controller, Optional.empty());
+                boolean configConverged = application.configConvergedIn(zone.getId(), controller, Optional.empty());
                 if (!configConverged) {
-                    log.log(LogLevel.WARNING, "Config for " + application.id() + " in " + zone.getId() +
+                    log.log(Level.WARNING, "Config for " + application.id() + " in " + zone.getId() +
                                               " has not converged");
                 }
-                var now = controller.clock().instant();
                 for (var node : nodes) {
                     // Only use current node version if config has converged
-                    Version version = configConverged ? node.currentVersion() : controller.systemVersion();
-                    newNodeVersions.add(new NodeVersion(node.hostname(), zone.getId(), version, node.wantedVersion(), now));
+                    var version = configConverged ? node.currentVersion() : controller.systemVersion(versionStatus);
+                    var nodeVersion = new NodeVersion(node.hostname(), zone.getId(), version, node.wantedVersion(),
+                                                      node.suspendedSince());
+                    nodeVersions.add(nodeVersion);
                 }
             }
         }
-        return nodeVersions.with(newNodeVersions);
+        return nodeVersions;
     }
 
-    private static ListMultimap<ControllerVersion, HostName> findControllerVersions(Controller controller) {
-        ListMultimap<ControllerVersion, HostName> versions = ArrayListMultimap.create();
+    private static Map<ControllerVersion, List<HostName>> findControllerVersions(Controller controller) {
+        Map<ControllerVersion, List<HostName>> versions = new HashMap<>();
         if (controller.curator().cluster().isEmpty()) { // Use vtag if we do not have cluster
-            versions.put(ControllerVersion.CURRENT, controller.hostname());
+            versions.computeIfAbsent(ControllerVersion.CURRENT, (k) -> new ArrayList<>())
+                    .add(controller.hostname());
         } else {
-            for (HostName hostname : controller.curator().cluster()) {
-                versions.put(controller.curator().readControllerVersion(hostname), hostname);
+            for (String host : controller.curator().cluster()) {
+                HostName hostname = HostName.from(host);
+                versions.computeIfAbsent(controller.curator().readControllerVersion(hostname), (k) -> new ArrayList<>())
+                        .add(hostname);
             }
         }
         return versions;
-    }
-
-    private static Collection<DeploymentStatistics> computeDeploymentStatistics(Set<Version> infrastructureVersions,
-                                                                                DeploymentStatusList statuses) {
-        Map<Version, DeploymentStatistics> versionMap = new HashMap<>();
-
-        for (Version infrastructureVersion : infrastructureVersions) {
-            versionMap.put(infrastructureVersion, DeploymentStatistics.empty(infrastructureVersion));
-        }
-
-        for (DeploymentStatus status : statuses.asList()) {
-            for (Instance instance : status.application().instances().values())
-                for (Deployment deployment : instance.productionDeployments().values())
-                    versionMap.computeIfAbsent(deployment.version(), DeploymentStatistics::empty);
-
-            status.instanceJobs().forEach((id, jobs) -> {
-                // Add all unsuccessful runs for failing jobs as any run may have resulted in an incomplete deployment
-                // where a subset of nodes have upgraded.
-                jobs.failing()
-                    .not().failingApplicationChange()
-                    .not().withStatus(RunStatus.outOfCapacity)
-                    .mapToList(JobStatus::runs)
-                    .forEach(runs -> runs.descendingMap().values().stream()
-                                         .dropWhile(run -> !run.hasEnded())
-                                         .takeWhile(run -> run.hasFailed())
-                                         .map(run -> run.versions().targetPlatform())
-                                         .forEach(version -> versionMap.put(version,
-                                                                            versionMap.getOrDefault(version, DeploymentStatistics.empty(version))
-                                                                                      .withFailing(id))));
-
-                jobs.production()
-                    .lastSuccess().mapToList(run -> run.versions().targetPlatform())
-                    .forEach(version -> versionMap.put(version,
-                                                       versionMap.getOrDefault(version, DeploymentStatistics.empty(version))
-                                                                 .withProduction(id)));
-
-                jobs.upgrading()
-                    .lastTriggered().mapToList(run -> run.versions().targetPlatform())
-                    .forEach(version -> versionMap.put(version,
-                                                       versionMap.getOrDefault(version, DeploymentStatistics.empty(version))
-                                                                 .withDeploying(id)));
-            });
-        }
-        return versionMap.values();
     }
 
     private static VespaVersion createVersion(DeploymentStatistics statistics,
                                               Set<ControllerVersion> controllerVersions,
                                               Version systemVersion,
                                               boolean isReleased,
-                                              NodeVersions nodeVersions,
-                                              Controller controller) {
-        var latestVersion = controllerVersions.stream().max(Comparator.naturalOrder()).get();
-        var controllerVersion = controllerVersions.stream().min(Comparator.naturalOrder()).get();
-        var isSystemVersion = statistics.version().equals(systemVersion);
-        var isControllerVersion = statistics.version().equals(controllerVersion.version());
-        var confidence = controller.curator().readConfidenceOverrides().get(statistics.version());
-        var confidenceIsOverridden = confidence != null;
-        var previousStatus = controller.versionStatus().version(statistics.version());
+                                              List<NodeVersion> nodeVersions,
+                                              Controller controller,
+                                              VersionStatus versionStatus) {
+        ControllerVersion latestVersion = controllerVersions.stream().max(Comparator.naturalOrder()).get();
+        ControllerVersion controllerVersion = controllerVersions.stream().min(Comparator.naturalOrder()).get();
+        boolean isSystemVersion = statistics.version().equals(systemVersion);
+        boolean isControllerVersion = statistics.version().equals(controllerVersion.version());
+        VespaVersion.Confidence confidence = controller.curator().readConfidenceOverrides().get(statistics.version());
+        boolean confidenceIsOverridden = confidence != null;
+        VespaVersion existingVespaVersion = versionStatus.version(statistics.version());
 
         // Compute confidence
         if (!confidenceIsOverridden) {
@@ -252,25 +215,31 @@ public class VersionStatus {
                 confidence = VespaVersion.confidenceFrom(statistics, controller);
             } else {
                 // This is an older version so we preserve the existing confidence, if any
-                confidence = getOrUpdateConfidence(statistics, controller);
+                confidence = versionStatus.versions().stream()
+                                          .filter(v -> statistics.version().equals(v.versionNumber()))
+                                          .map(VespaVersion::confidence)
+                                          .findFirst()
+                                          .orElseGet(() -> VespaVersion.confidenceFrom(statistics, controller));
             }
         }
 
         // Preserve existing commit details if we've previously computed status for this version
         var commitSha = latestVersion.commitSha();
         var commitDate = latestVersion.commitDate();
-        if (previousStatus != null) {
-            commitSha = previousStatus.releaseCommit();
-            commitDate = previousStatus.committedAt();
+        if (existingVespaVersion != null) {
+            commitSha = existingVespaVersion.releaseCommit();
+            commitDate = existingVespaVersion.committedAt();
 
             // Keep existing confidence if we cannot raise it at this moment in time
             if (!confidenceIsOverridden &&
-                !previousStatus.confidence().canChangeTo(confidence, controller.clock().instant())) {
-                confidence = previousStatus.confidence();
+                !existingVespaVersion.confidence().canChangeTo(confidence,
+                                                               controller.serviceRegistry().zoneRegistry().system(),
+                                                               controller.clock().instant())) {
+                confidence = existingVespaVersion.confidence();
             }
         }
 
-        return new VespaVersion(statistics,
+        return new VespaVersion(statistics.version(),
                                 commitSha,
                                 commitDate,
                                 isControllerVersion,
@@ -278,19 +247,6 @@ public class VersionStatus {
                                 isReleased,
                                 nodeVersions,
                                 confidence);
-    }
-
-    /**
-     * Calculate confidence from given deployment statistics.
-     *
-     * @return previously calculated confidence for this version. If none exists, a new confidence will be calculated.
-     */
-    private static VespaVersion.Confidence getOrUpdateConfidence(DeploymentStatistics statistics, Controller controller) {
-        return controller.versionStatus().versions().stream()
-                         .filter(v -> statistics.version().equals(v.versionNumber()))
-                         .map(VespaVersion::confidence)
-                         .findFirst()
-                         .orElseGet(() -> VespaVersion.confidenceFrom(statistics, controller));
     }
 
 }
