@@ -4,35 +4,36 @@ package com.yahoo.vespa.hosted.controller.deployment;
 import com.google.common.collect.ImmutableList;
 import com.yahoo.component.Version;
 import com.yahoo.config.application.api.DeploymentSpec;
+import com.yahoo.config.provision.AthenzDomain;
+import com.yahoo.config.provision.AthenzService;
 import com.yahoo.config.provision.HostName;
 import com.yahoo.config.provision.NodeResources;
 import com.yahoo.config.provision.SystemName;
 import com.yahoo.config.provision.zone.RoutingMethod;
 import com.yahoo.config.provision.zone.ZoneId;
-import com.yahoo.slime.ArrayTraverser;
 import com.yahoo.slime.Inspector;
 import com.yahoo.slime.SlimeUtils;
+import com.yahoo.vespa.hosted.controller.RoutingController;
 import com.yahoo.vespa.hosted.controller.api.application.v4.model.configserverbindings.ConfigChangeActions;
-import com.yahoo.vespa.hosted.controller.api.application.v4.model.configserverbindings.RefeedAction;
 import com.yahoo.vespa.hosted.controller.api.application.v4.model.configserverbindings.RestartAction;
 import com.yahoo.vespa.hosted.controller.api.application.v4.model.configserverbindings.ServiceInfo;
-import com.yahoo.vespa.hosted.controller.api.identifiers.DeploymentId;
 import com.yahoo.vespa.hosted.controller.api.integration.LogEntry;
 import com.yahoo.vespa.hosted.controller.api.integration.configserver.ConfigServerException;
 import com.yahoo.vespa.hosted.controller.api.integration.configserver.Node;
+import com.yahoo.vespa.hosted.controller.api.integration.configserver.NodeFilter;
 import com.yahoo.vespa.hosted.controller.api.integration.deployment.JobType;
 import com.yahoo.vespa.hosted.controller.api.integration.deployment.RunId;
 import com.yahoo.vespa.hosted.controller.api.integration.deployment.TesterCloud;
 import com.yahoo.vespa.hosted.controller.api.integration.stubs.MockMailer;
-import com.yahoo.vespa.hosted.controller.application.ApplicationPackage;
+import com.yahoo.vespa.hosted.controller.application.pkg.ApplicationPackage;
 import com.yahoo.vespa.hosted.controller.application.SystemApplication;
+import com.yahoo.vespa.hosted.controller.config.ControllerConfig;
 import com.yahoo.vespa.hosted.controller.integration.ZoneApiMock;
 import org.junit.Before;
 import org.junit.Test;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -41,7 +42,6 @@ import java.time.Duration;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.Executors;
@@ -51,17 +51,15 @@ import static com.yahoo.vespa.hosted.controller.api.integration.LogEntry.Type.er
 import static com.yahoo.vespa.hosted.controller.api.integration.LogEntry.Type.info;
 import static com.yahoo.vespa.hosted.controller.api.integration.LogEntry.Type.warning;
 import static com.yahoo.vespa.hosted.controller.deployment.DeploymentContext.applicationPackage;
-import static com.yahoo.vespa.hosted.controller.deployment.DeploymentContext.publicCdApplicationPackage;
 import static com.yahoo.vespa.hosted.controller.deployment.DeploymentTester.instanceId;
 import static com.yahoo.vespa.hosted.controller.deployment.RunStatus.deploymentFailed;
 import static com.yahoo.vespa.hosted.controller.deployment.RunStatus.installationFailed;
 import static com.yahoo.vespa.hosted.controller.deployment.Step.Status.failed;
 import static com.yahoo.vespa.hosted.controller.deployment.Step.Status.succeeded;
 import static com.yahoo.vespa.hosted.controller.deployment.Step.Status.unfinished;
-import static java.util.Collections.singletonList;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 
 /**
  * @author jonmv
@@ -102,13 +100,11 @@ public class InternalStepRunnerTest {
 
     @Test
     public void retriesDeploymentForOneHour() {
-        RuntimeException exception = new ConfigServerException(URI.create("https://server"),
-                                                               "test failure",
+        RuntimeException exception = new ConfigServerException(ConfigServerException.ErrorCode.APPLICATION_LOCK_FAILURE,
                                                                "Exception to retry",
-                                                               ConfigServerException.ErrorCode.APPLICATION_LOCK_FAILURE,
-                                                               new RuntimeException("Retry me"));
+                                                               "test failure");
         tester.configServer().throwOnNextPrepare(exception);
-        tester.jobs().deploy(app.instanceId(), JobType.devUsEast1, Optional.empty(), applicationPackage);
+        tester.jobs().deploy(app.instanceId(), JobType.devUsEast1, Optional.empty(), applicationPackage());
         assertEquals(unfinished, tester.jobs().last(app.instanceId(), JobType.devUsEast1).get().stepStatuses().get(Step.deployReal));
 
         tester.configServer().throwOnNextPrepare(exception);
@@ -123,33 +119,22 @@ public class InternalStepRunnerTest {
     }
 
     @Test
-    public void refeedRequirementBlocksDeployment() {
-        tester.configServer().setConfigChangeActions(new ConfigChangeActions(Collections.emptyList(),
-                                                                             singletonList(new RefeedAction("Refeed",
-                                                                                                            false,
-                                                                                                            "doctype",
-                                                                                                            "cluster",
-                                                                                                            Collections.emptyList(),
-                                                                                                            singletonList("Refeed it!")))));
-        tester.jobs().deploy(app.instanceId(), JobType.devUsEast1, Optional.empty(), applicationPackage);
-        assertEquals(failed, tester.jobs().last(app.instanceId(), JobType.devUsEast1).get().stepStatuses().get(Step.deployReal));
-    }
-
-    @Test
+    // TODO jonmv: Change to only wait for restarts, and remove triggering of restarts from runner.
     public void restartsServicesAndWaitsForRestartAndReboot() {
         RunId id = app.newRun(JobType.productionUsCentral1);
         ZoneId zone = id.type().zone(system());
         HostName host = tester.configServer().hostFor(instanceId, zone);
 
-        tester.configServer().setConfigChangeActions(new ConfigChangeActions(singletonList(new RestartAction("cluster",
-                                                                                                             "container",
-                                                                                                             "search",
-                                                                                                             singletonList(new ServiceInfo("queries",
-                                                                                                                                                                   "search",
-                                                                                                                                                                   "config",
-                                                                                                                                                                   host.value())),
-                                                                                                             singletonList("Restart it!"))),
-                                                                             Collections.emptyList()));
+        tester.configServer().setConfigChangeActions(new ConfigChangeActions(List.of(new RestartAction("cluster",
+                                                                                                       "container",
+                                                                                                       "search",
+                                                                                                       List.of(new ServiceInfo("queries",
+                                                                                                                               "search",
+                                                                                                                               "config",
+                                                                                                                               host.value())),
+                                                                                                       List.of("Restart it!"))),
+                                                                             List.of(),
+                                                                             List.of()));
         tester.runner().run();
         assertEquals(succeeded, tester.jobs().run(id).get().stepStatuses().get(Step.deployReal));
 
@@ -161,7 +146,7 @@ public class InternalStepRunnerTest {
         tester.runner().run();
         assertEquals(unfinished, tester.jobs().run(id).get().stepStatuses().get(Step.installReal));
 
-        tester.clock().advance(InternalStepRunner.installationTimeout.plus(Duration.ofSeconds(1)));
+        tester.clock().advance(InternalStepRunner.Timeouts.of(system()).noNodesDown().plus(Duration.ofSeconds(1)));
         tester.runner().run();
         assertEquals(installationFailed, tester.jobs().run(id).get().status());
     }
@@ -170,9 +155,13 @@ public class InternalStepRunnerTest {
     public void waitsForEndpointsAndTimesOut() {
         app.newRun(JobType.systemTest);
 
-        // Tester fails to show up for staging tests, and the real deployment for system tests.
-        tester.setEndpoints(app.testerId().id(), JobType.systemTest.zone(system()));
-        tester.setEndpoints(app.instanceId(), JobType.stagingTest.zone(system()));
+        // Tester endpoint fails to show up for staging tests, and the real deployment for system tests.
+        var testZone = JobType.systemTest.zone(system());
+        var stagingZone = JobType.stagingTest.zone(system());
+        tester.newDeploymentContext(app.testerId().id())
+              .deferLoadBalancerProvisioningIn(testZone.environment());
+        tester.newDeploymentContext(app.instanceId())
+              .deferLoadBalancerProvisioningIn(stagingZone.environment());
 
         tester.runner().run();
         tester.configServer().convergeServices(app.instanceId(), JobType.stagingTest.zone(system()));
@@ -183,7 +172,7 @@ public class InternalStepRunnerTest {
         tester.configServer().convergeServices(app.testerId().id(), JobType.stagingTest.zone(system()));
         tester.runner().run();
 
-        tester.clock().advance(InternalStepRunner.endpointTimeout.plus(Duration.ofSeconds(1)));
+        tester.clock().advance(InternalStepRunner.Timeouts.of(system()).endpoint().plus(Duration.ofSeconds(1)));
         tester.runner().run();
         assertEquals(failed, tester.jobs().last(app.instanceId(), JobType.systemTest).get().stepStatuses().get(Step.installReal));
     }
@@ -197,26 +186,22 @@ public class InternalStepRunnerTest {
 
         // Node is down too long in system test, and no nodes go down in staging.
         tester.runner().run();
-        tester.setEndpoints(app.testerId().id(), JobType.systemTest.zone(system()));
-        tester.configServer().setVersion(app.testerId().id(), JobType.systemTest.zone(system()), tester.controller().systemVersion());
+        tester.configServer().setVersion(tester.controller().readSystemVersion(), app.testerId().id(), JobType.systemTest.zone(system()));
         tester.configServer().convergeServices(app.testerId().id(), JobType.systemTest.zone(system()));
-        tester.setEndpoints(app.instanceId(), JobType.systemTest.zone(system()));
-        tester.setEndpoints(app.testerId().id(), JobType.stagingTest.zone(system()));
-        tester.configServer().setVersion(app.testerId().id(), JobType.stagingTest.zone(system()), tester.controller().systemVersion());
+        tester.configServer().setVersion(tester.controller().readSystemVersion(), app.testerId().id(), JobType.stagingTest.zone(system()));
         tester.configServer().convergeServices(app.testerId().id(), JobType.stagingTest.zone(system()));
-        tester.setEndpoints(app.instanceId(), JobType.stagingTest.zone(system()));
         tester.runner().run();
         assertEquals(succeeded, tester.jobs().last(app.instanceId(), JobType.systemTest).get().stepStatuses().get(Step.installTester));
         assertEquals(succeeded, tester.jobs().last(app.instanceId(), JobType.stagingTest).get().stepStatuses().get(Step.installTester));
 
         Node systemTestNode = tester.configServer().nodeRepository().list(JobType.systemTest.zone(system()),
-                                                                          app.instanceId()).iterator().next();
-        tester.clock().advance(InternalStepRunner.installationTimeout.minus(Duration.ofSeconds(1)));
-        tester.configServer().nodeRepository().putByHostname(JobType.systemTest.zone(system()),
-                                                             new Node.Builder(systemTestNode)
-                                                                     .serviceState(Node.ServiceState.allowedDown)
-                                                                     .suspendedSince(tester.clock().instant())
-                                                                     .build());
+                                                                          NodeFilter.all().applications(app.instanceId())).iterator().next();
+        tester.clock().advance(InternalStepRunner.Timeouts.of(system()).noNodesDown().minus(Duration.ofSeconds(1)));
+        tester.configServer().nodeRepository().putNodes(JobType.systemTest.zone(system()),
+                                                        Node.builder(systemTestNode)
+                                                            .serviceState(Node.ServiceState.allowedDown)
+                                                            .suspendedSince(tester.clock().instant())
+                                                            .build());
         tester.runner().run();
         assertEquals(unfinished, tester.jobs().last(app.instanceId(), JobType.systemTest).get().stepStatuses().get(Step.installReal));
         assertEquals(unfinished, tester.jobs().last(app.instanceId(), JobType.stagingTest).get().stepStatuses().get(Step.installInitialReal));
@@ -226,7 +211,7 @@ public class InternalStepRunnerTest {
         assertEquals(unfinished, tester.jobs().last(app.instanceId(), JobType.systemTest).get().stepStatuses().get(Step.installReal));
         assertEquals(failed, tester.jobs().last(app.instanceId(), JobType.stagingTest).get().stepStatuses().get(Step.installInitialReal));
 
-        tester.clock().advance(InternalStepRunner.installationTimeout.minus(Duration.ofSeconds(3)));
+        tester.clock().advance(InternalStepRunner.Timeouts.of(system()).nodesDown().minus(Duration.ofSeconds(3)));
         tester.runner().run();
         assertEquals(unfinished, tester.jobs().last(app.instanceId(), JobType.systemTest).get().stepStatuses().get(Step.installReal));
 
@@ -240,13 +225,11 @@ public class InternalStepRunnerTest {
         app.newRun(JobType.systemTest);
         tester.runner().run();
         tester.configServer().convergeServices(app.instanceId(), JobType.systemTest.zone(system()));
-        tester.setEndpoints(app.instanceId(), JobType.systemTest.zone(system()));
         tester.runner().run();
         assertEquals(succeeded, tester.jobs().last(app.instanceId(), JobType.systemTest).get().stepStatuses().get(Step.installReal));
         assertEquals(unfinished, tester.jobs().last(app.instanceId(), JobType.systemTest).get().stepStatuses().get(Step.installTester));
 
         tester.applications().deactivate(app.instanceId(), JobType.systemTest.zone(system()));
-        tester.setEndpoints(app.testerId().id(), JobType.systemTest.zone(system()));
         tester.configServer().convergeServices(app.testerId().id(), JobType.systemTest.zone(system()));
         tester.runner().run();
         assertEquals(succeeded, tester.jobs().last(app.instanceId(), JobType.systemTest).get().stepStatuses().get(Step.installTester));
@@ -260,15 +243,24 @@ public class InternalStepRunnerTest {
         var systemTestZone =  JobType.systemTest.zone(system());
         var stagingZone =  JobType.stagingTest.zone(system());
         tester.controllerTester().zoneRegistry().exclusiveRoutingIn(ZoneApiMock.from(systemTestZone), ZoneApiMock.from(stagingZone));
-        app.newRun(JobType.systemTest);
-        tester.runner().run();;
-        tester.configServer().convergeServices(app.instanceId(), JobType.systemTest.zone(system()));
-        tester.configServer().convergeServices(app.testerId().id(), JobType.systemTest.zone(system()));
+        var applicationPackage = new ApplicationPackageBuilder()
+                .athenzIdentity(AthenzDomain.from("domain"), AthenzService.from("service"))
+                .upgradePolicy("default")
+                .region("us-central-1")
+                .parallel("us-west-1", "us-east-3")
+                .compileVersion(RoutingController.DIRECT_ROUTING_MIN_VERSION)
+                .build();
+        app.submit(applicationPackage)
+           .triggerJobs();
+
+        tester.runner().run();
         assertEquals(unfinished, tester.jobs().last(app.instanceId(), JobType.systemTest).get().stepStatuses().get(Step.installReal));
         assertEquals(unfinished, tester.jobs().last(app.instanceId(), JobType.systemTest).get().stepStatuses().get(Step.installTester));
-        app.addRoutingPolicy(JobType.systemTest.zone(system()), true);
-        app.addTesterRoutingPolicy(JobType.systemTest.zone(system()), true);
-        tester.runner().run();;
+
+        app.flushDnsUpdates();
+        tester.configServer().convergeServices(app.instanceId(), JobType.systemTest.zone(system()));
+        tester.configServer().convergeServices(app.testerId().id(), JobType.systemTest.zone(system()));
+        tester.runner().run();
         assertEquals(succeeded, tester.jobs().last(app.instanceId(), JobType.systemTest).get().stepStatuses().get(Step.installReal));
         assertEquals(succeeded, tester.jobs().last(app.instanceId(), JobType.systemTest).get().stepStatuses().get(Step.installTester));
     }
@@ -314,13 +306,13 @@ public class InternalStepRunnerTest {
         RunId id = app.startSystemTestTests();
         tester.runner().run();
         assertEquals(unfinished, tester.jobs().run(id).get().stepStatuses().get(Step.endTests));
+        var testZone = JobType.systemTest.zone(system());
         Inspector configObject = SlimeUtils.jsonToSlime(tester.cloud().config()).get();
         assertEquals(app.instanceId().serializedForm(), configObject.field("application").asString());
-        assertEquals(JobType.systemTest.zone(system()).value(), configObject.field("zone").asString());
+        assertEquals(testZone.value(), configObject.field("zone").asString());
         assertEquals(system().value(), configObject.field("system").asString());
-        assertEquals(1, configObject.field("endpoints").children());
-        assertEquals(1, configObject.field("endpoints").field(JobType.systemTest.zone(system()).value()).entries());
-        configObject.field("endpoints").field(JobType.systemTest.zone(system()).value()).traverse((ArrayTraverser) (__, endpoint) -> assertEquals(tester.routing().endpoints(new DeploymentId(instanceId, JobType.systemTest.zone(system()))).get(0).endpoint(), endpoint.asString()));
+        assertEquals(1, configObject.field("zoneEndpoints").children());
+        assertEquals(1, configObject.field("zoneEndpoints").field(testZone.value()).children());
 
         long lastId = tester.jobs().details(id).get().lastId().getAsLong();
         tester.cloud().add(new LogEntry(0, Instant.ofEpochMilli(123), info, "Ready!"));
@@ -348,14 +340,14 @@ public class InternalStepRunnerTest {
     @Test
     public void deployToDev() {
         ZoneId zone = JobType.devUsEast1.zone(system());
-        tester.jobs().deploy(app.instanceId(), JobType.devUsEast1, Optional.empty(), applicationPackage);
+        tester.jobs().deploy(app.instanceId(), JobType.devUsEast1, Optional.empty(), applicationPackage());
         tester.runner().run();
         RunId id = tester.jobs().last(app.instanceId(), JobType.devUsEast1).get().id();
         assertEquals(unfinished, tester.jobs().run(id).get().stepStatuses().get(Step.installReal));
 
         Version version = new Version("7.8.9");
         Future<?> concurrentDeployment = Executors.newSingleThreadExecutor().submit(() -> {
-            tester.jobs().deploy(app.instanceId(), JobType.devUsEast1, Optional.of(version), applicationPackage);
+            tester.jobs().deploy(app.instanceId(), JobType.devUsEast1, Optional.of(version), applicationPackage());
         });
         while ( ! concurrentDeployment.isDone())
             tester.runner().run();
@@ -366,21 +358,14 @@ public class InternalStepRunnerTest {
 
         tester.runner().run(); // Job run order determined by JobType enum order per application.
         tester.configServer().convergeServices(app.instanceId(), zone);
-        tester.setEndpoints(app.instanceId(), zone);
         assertEquals(unfinished, tester.jobs().run(id).get().stepStatuses().get(Step.installReal));
-        assertEquals(applicationPackage.hash(), tester.configServer().application(app.instanceId(), zone).get().applicationPackage().hash());
+        assertEquals(applicationPackage().hash(), tester.configServer().application(app.instanceId(), zone).get().applicationPackage().hash());
         assertEquals(otherPackage.hash(), tester.configServer().application(app.instanceId(), JobType.perfUsEast3.zone(system())).get().applicationPackage().hash());
 
-        tester.configServer().setVersion(app.instanceId(), zone, version);
+        tester.configServer().setVersion(version, app.instanceId(), zone);
         tester.runner().run();
         assertEquals(1, tester.jobs().active().size());
         assertEquals(version, tester.instance(app.instanceId()).deployments().get(zone).version());
-
-        try {
-            tester.jobs().deploy(app.instanceId(), JobType.productionApNortheast1, Optional.empty(), applicationPackage);
-            fail("Deployments outside dev should not be allowed.");
-        }
-        catch (IllegalArgumentException expected) { }
     }
 
     @Test
@@ -399,44 +384,97 @@ public class InternalStepRunnerTest {
 
     @Test
     public void vespaLogIsCopied() {
+        // Tests fail. We should get logs. This fails too, on the first attempt.
         RunId id = app.startSystemTestTests();
         tester.cloud().set(TesterCloud.Status.ERROR);
-        tester.configServer().setLogStream(vespaLog);
+        tester.configServer().setLogStream(() -> { throw new ConfigServerException(ConfigServerException.ErrorCode.NOT_FOUND, "404", "context"); });
         long lastId = tester.jobs().details(id).get().lastId().getAsLong();
         tester.runner().run();
         assertEquals(failed, tester.jobs().run(id).get().stepStatuses().get(Step.endTests));
+        assertEquals(unfinished, tester.jobs().run(id).get().stepStatuses().get(Step.copyVespaLogs));
         assertTestLogEntries(id, Step.copyVespaLogs,
-                             new LogEntry(lastId + 2, Instant.EPOCH.plus(3554970337935104L, ChronoUnit.MICROS), info,
+                             new LogEntry(lastId + 2, tester.clock().instant(), info,
+                                          "Found no logs, but will retry"),
+                             new LogEntry(lastId + 4, tester.clock().instant(), info,
+                                          "Found no logs, but will retry"));
+
+        // Config servers now provide the log, and we get it.
+        tester.configServer().setLogStream(() -> vespaLog);
+        tester.runner().run();
+        assertEquals(failed, tester.jobs().run(id).get().stepStatuses().get(Step.endTests));
+        assertTestLogEntries(id, Step.copyVespaLogs,
+                             new LogEntry(lastId + 2, tester.clock().instant(), info,
+                                          "Found no logs, but will retry"),
+                             new LogEntry(lastId + 4, tester.clock().instant(), info,
+                                          "Found no logs, but will retry"),
+                             new LogEntry(lastId + 5, Instant.EPOCH.plus(3554970337935104L, ChronoUnit.MICROS), info,
                                           "17491290-v6-1.ostk.bm2.prod.ne1.yahoo.com\tcontainer\tstdout\n" +
                                           "ERROR: Bundle canary-application [71] Unable to get module class path. (java.lang.NullPointerException)"),
-                             new LogEntry(lastId + 3, Instant.EPOCH.plus(3554970337947777L, ChronoUnit.MICROS), info,
+                             new LogEntry(lastId + 6, Instant.EPOCH.plus(3554970337947777L, ChronoUnit.MICROS), info,
                                           "17491290-v6-1.ostk.bm2.prod.ne1.yahoo.com\tcontainer\tstdout\n" +
                                           "ERROR: Bundle canary-application [71] Unable to get module class path. (java.lang.NullPointerException)"),
-                             new LogEntry(lastId + 4, Instant.EPOCH.plus(3554970337947820L, ChronoUnit.MICROS), info,
+                             new LogEntry(lastId + 7, Instant.EPOCH.plus(3554970337947820L, ChronoUnit.MICROS), info,
                                           "17491290-v6-1.ostk.bm2.prod.ne1.yahoo.com\tcontainer\tstdout\n" +
                                           "ERROR: Bundle canary-application [71] Unable to get module class path. (java.lang.NullPointerException)"),
-                             new LogEntry(lastId + 5, Instant.EPOCH.plus(3554970337947845L, ChronoUnit.MICROS), warning,
+                             new LogEntry(lastId + 8, Instant.EPOCH.plus(3554970337947845L, ChronoUnit.MICROS), warning,
                                           "17491290-v6-1.ostk.bm2.prod.ne1.yahoo.com\tcontainer\tstderr\n" +
                                           "java.lang.NullPointerException\n\tat org.apache.felix.framework.BundleRevisionImpl.calculateContentPath(BundleRevisionImpl.java:438)\n\tat org.apache.felix.framework.BundleRevisionImpl.initializeContentPath(BundleRevisionImpl.java:371)"));
     }
 
     @Test
-    public void certificateTimeoutAbortsJob() {
-        tester.controllerTester().zoneRegistry().setSystemName(SystemName.PublicCd);
+    public void realDeploymentRequiresForTesterCert() {
+        tester.controllerTester().zoneRegistry().setSystemName(SystemName.Public);
         var zones = List.of(ZoneApiMock.fromId("test.aws-us-east-1c"),
-                                      ZoneApiMock.fromId("staging.aws-us-east-1c"),
-                                      ZoneApiMock.fromId("prod.aws-us-east-1c"));
+                            ZoneApiMock.fromId("staging.aws-us-east-1c"),
+                            ZoneApiMock.fromId("prod.aws-us-east-1c"));
         tester.controllerTester().zoneRegistry()
               .setZones(zones)
-              .setRoutingMethod(zones, RoutingMethod.shared);
+              .setRoutingMethod(zones, RoutingMethod.exclusive);
+        tester.configServer().bootstrap(tester.controllerTester().zoneRegistry().zones().all().ids(), SystemApplication.values());
+        ZoneId testZone = JobType.systemTest.zone(tester.controller().system());
+        RunId id = app.newRun(JobType.systemTest);
+        tester.configServer().throwOnPrepare(instanceId -> {
+            if (instanceId.instance().isTester())
+                throw new ConfigServerException(ConfigServerException.ErrorCode.PARENT_HOST_NOT_READY, "provisioning", "deploy tester");
+        });
+        tester.runner().run();
+        assertEquals(unfinished, tester.jobs().run(id).get().stepStatuses().get(Step.deployTester));
+        assertEquals(unfinished, tester.jobs().run(id).get().stepStatuses().get(Step.deployReal));
+
+        List<X509Certificate> oldTrusted = new ArrayList<>(DeploymentContext.publicApplicationPackage().trustedCertificates());
+        X509Certificate oldCert = tester.jobs().run(id).get().testerCertificate().get();
+        oldTrusted.add(oldCert);
+        assertEquals(oldTrusted, tester.configServer().application(app.instanceId(), id.type().zone(system())).get().applicationPackage().trustedCertificates());
+
+        tester.configServer().throwOnNextPrepare(null);
+        tester.runner().run();
+        assertEquals(succeeded, tester.jobs().run(id).get().stepStatuses().get(Step.deployTester));
+        assertEquals(succeeded, tester.jobs().run(id).get().stepStatuses().get(Step.deployReal));
+
+        List<X509Certificate> newTrusted = new ArrayList<>(DeploymentContext.publicApplicationPackage().trustedCertificates());
+        X509Certificate newCert = tester.jobs().run(id).get().testerCertificate().get();
+        newTrusted.add(newCert);
+        assertEquals(newTrusted, tester.configServer().application(app.instanceId(), id.type().zone(system())).get().applicationPackage().trustedCertificates());
+        assertNotEquals(oldCert, newCert);
+    }
+
+    @Test
+    public void certificateTimeoutAbortsJob() {
+        tester.controllerTester().zoneRegistry().setSystemName(SystemName.Public);
+        var zones = List.of(ZoneApiMock.fromId("test.aws-us-east-1c"),
+                            ZoneApiMock.fromId("staging.aws-us-east-1c"),
+                            ZoneApiMock.fromId("prod.aws-us-east-1c"));
+        tester.controllerTester().zoneRegistry()
+              .setZones(zones)
+              .setRoutingMethod(zones, RoutingMethod.exclusive);
         tester.configServer().bootstrap(tester.controllerTester().zoneRegistry().zones().all().ids(), SystemApplication.values());
         RunId id = app.startSystemTestTests();
 
-        List<X509Certificate> trusted = new ArrayList<>(publicCdApplicationPackage.trustedCertificates());
+        List<X509Certificate> trusted = new ArrayList<>(DeploymentContext.publicApplicationPackage().trustedCertificates());
         trusted.add(tester.jobs().run(id).get().testerCertificate().get());
         assertEquals(trusted, tester.configServer().application(app.instanceId(), id.type().zone(system())).get().applicationPackage().trustedCertificates());
 
-        tester.clock().advance(InternalStepRunner.certificateTimeout.plus(Duration.ofSeconds(1)));
+        tester.clock().advance(InternalStepRunner.Timeouts.of(system()).testerCertificate().plus(Duration.ofSeconds(1)));
         tester.runner().run();
         assertEquals(RunStatus.aborted, tester.jobs().run(id).get().status());
     }
@@ -485,12 +523,24 @@ public class InternalStepRunnerTest {
     }
 
     @Test
-    public void generates_correct_services_xml_test() {
-        assertFile("test_runner_services.xml-cd",
-                   new String(InternalStepRunner.servicesXml(
-                           true,
-                           false,
-                           new NodeResources(2, 12, 75, 1, NodeResources.DiskSpeed.fast, NodeResources.StorageType.local))));
+    public void generates_correct_services_xml_using_osgi_based_runtime() {
+        generates_correct_services_xml("test_runner_services.xml-cd-osgi", true);
+    }
+
+    @Test
+    public void generates_correct_services_xml_using_legacy_runtime() {
+        generates_correct_services_xml("test_runner_services.xml-cd-legacy", false);
+    }
+
+    private void generates_correct_services_xml(String filenameExpectedOutput, boolean useOsgiBasedRuntime) {
+        ControllerConfig.Steprunner.Testerapp config = new ControllerConfig.Steprunner.Testerapp.Builder().build();
+        assertFile(filenameExpectedOutput,
+                new String(InternalStepRunner.servicesXml(
+                        true,
+                        false,
+                        useOsgiBasedRuntime,
+                        new NodeResources(2, 12, 75, 1, NodeResources.DiskSpeed.fast, NodeResources.StorageType.local),
+                        config)));
     }
 
     private void assertFile(String resourceName, String actualContent) {
