@@ -5,31 +5,42 @@ import com.google.inject.Inject;
 import com.yahoo.component.AbstractComponent;
 import com.yahoo.component.Version;
 import com.yahoo.config.provision.ApplicationId;
+import com.yahoo.config.provision.ClusterResources;
+import com.yahoo.config.provision.ClusterSpec;
+import com.yahoo.config.provision.DockerImage;
+import com.yahoo.config.provision.Environment;
 import com.yahoo.config.provision.HostName;
 import com.yahoo.config.provision.NodeResources;
 import com.yahoo.config.provision.NodeType;
 import com.yahoo.config.provision.zone.ZoneId;
+import com.yahoo.text.Text;
 import com.yahoo.vespa.flags.json.FlagData;
 import com.yahoo.vespa.hosted.controller.api.application.v4.model.ClusterMetrics;
-import com.yahoo.vespa.hosted.controller.api.application.v4.model.DeployOptions;
+import com.yahoo.vespa.hosted.controller.api.application.v4.model.DeploymentData;
 import com.yahoo.vespa.hosted.controller.api.application.v4.model.EndpointStatus;
+import com.yahoo.vespa.hosted.controller.api.application.v4.model.ProtonMetrics;
 import com.yahoo.vespa.hosted.controller.api.application.v4.model.configserverbindings.ConfigChangeActions;
 import com.yahoo.vespa.hosted.controller.api.identifiers.DeploymentId;
-import com.yahoo.vespa.hosted.controller.api.identifiers.Hostname;
-import com.yahoo.vespa.hosted.controller.api.identifiers.Identifier;
 import com.yahoo.vespa.hosted.controller.api.identifiers.TenantId;
 import com.yahoo.vespa.hosted.controller.api.integration.LogEntry;
-import com.yahoo.vespa.hosted.controller.api.integration.certificates.EndpointCertificateMetadata;
+import com.yahoo.vespa.hosted.controller.api.integration.configserver.ApplicationReindexing;
+import com.yahoo.vespa.hosted.controller.api.integration.configserver.ApplicationReindexing.Status;
+import com.yahoo.vespa.hosted.controller.api.integration.configserver.Cluster;
 import com.yahoo.vespa.hosted.controller.api.integration.configserver.ConfigServer;
 import com.yahoo.vespa.hosted.controller.api.integration.configserver.ContainerEndpoint;
 import com.yahoo.vespa.hosted.controller.api.integration.configserver.LoadBalancer;
 import com.yahoo.vespa.hosted.controller.api.integration.configserver.Log;
 import com.yahoo.vespa.hosted.controller.api.integration.configserver.Node;
-import com.yahoo.vespa.hosted.controller.api.integration.configserver.NotFoundException;
+import com.yahoo.vespa.hosted.controller.api.integration.configserver.NodeFilter;
 import com.yahoo.vespa.hosted.controller.api.integration.configserver.PrepareResponse;
+import com.yahoo.vespa.hosted.controller.api.integration.configserver.ProxyResponse;
+import com.yahoo.vespa.hosted.controller.api.integration.configserver.QuotaUsage;
 import com.yahoo.vespa.hosted.controller.api.integration.configserver.ServiceConvergence;
+import com.yahoo.vespa.hosted.controller.api.integration.deployment.TestReport;
 import com.yahoo.vespa.hosted.controller.api.integration.deployment.TesterCloud;
-import com.yahoo.vespa.hosted.controller.application.ApplicationPackage;
+import com.yahoo.vespa.hosted.controller.api.integration.noderepository.RestartFilter;
+import com.yahoo.vespa.hosted.controller.api.integration.secrets.TenantSecretStore;
+import com.yahoo.vespa.hosted.controller.application.pkg.ApplicationPackage;
 import com.yahoo.vespa.hosted.controller.application.SystemApplication;
 import com.yahoo.vespa.serviceview.bindings.ApplicationView;
 import com.yahoo.vespa.serviceview.bindings.ClusterView;
@@ -37,7 +48,9 @@ import com.yahoo.vespa.serviceview.bindings.ServiceView;
 
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -50,9 +63,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.UUID;
+import java.util.function.Consumer;
+import java.util.function.Supplier;
 import java.util.logging.Level;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 import static com.yahoo.config.provision.NodeResources.DiskSpeed.slow;
 import static com.yahoo.config.provision.NodeResources.StorageType.remote;
@@ -70,20 +85,24 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
     private final Map<DeploymentId, ServiceConvergence> serviceStatus = new HashMap<>();
     private final Set<ApplicationId> disallowConvergenceCheckApplications = new HashSet<>();
     private final Version initialVersion = new Version(6, 1, 0);
+    private final DockerImage initialDockerImage = DockerImage.fromString("registry.example.com/vespa/vespa:6.1.0");
     private final Set<DeploymentId> suspendedApplications = new HashSet<>();
     private final Map<ZoneId, Set<LoadBalancer>> loadBalancers = new HashMap<>();
+    private final Set<Environment> deferLoadBalancerProvisioning = new HashSet<>();
     private final Map<DeploymentId, List<Log>> warnings = new HashMap<>();
-    private final Map<DeploymentId, Set<String>> rotationNames = new HashMap<>();
+    private final Map<DeploymentId, Set<String>> containerEndpoints = new HashMap<>();
     private final Map<DeploymentId, List<ClusterMetrics>> clusterMetrics = new HashMap<>();
+    private final Map<DeploymentId, TestReport> testReport = new HashMap<>();
+    private List<ProtonMetrics> protonMetrics;
 
     private Version lastPrepareVersion = null;
-    private RuntimeException prepareException = null;
+    private Consumer<ApplicationId> prepareException = null;
     private ConfigChangeActions configChangeActions = null;
-    private String log = "INFO - All good";
+    private Supplier<String> log = () -> "INFO - All good";
 
     @Inject
     public ConfigServerMock(ZoneRegistryMock zoneRegistry) {
-        bootstrap(zoneRegistry.zones().all().ids(), SystemApplication.all());
+        bootstrap(zoneRegistry.zones().all().ids(), SystemApplication.notController());
     }
 
     /** Sets the ConfigChangeActions that will be returned on next deployment. */
@@ -92,24 +111,48 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
     }
 
     /** Assigns a reserved tenant node to the given deployment, with initial versions. */
-    public void provision(ZoneId zone, ApplicationId application) {
-        Node parent = nodeRepository().list(zone, SystemApplication.tenantHost.id()).stream().findAny()
+    public void provision(ZoneId zone, ApplicationId application, ClusterSpec.Id clusterId) {
+        var current = new ClusterResources(2, 1, new NodeResources(2,  8, 50, 1, slow, remote));
+        Cluster cluster = new Cluster(clusterId,
+                                      ClusterSpec.Type.container,
+                                      new ClusterResources(2, 1, new NodeResources(1,  4, 20, 1, slow, remote)),
+                                      new ClusterResources(2, 1, new NodeResources(4, 16, 90, 1, slow, remote)),
+                                      current,
+                                      Optional.of(new ClusterResources(2, 1, new NodeResources(3, 8, 50, 1, slow, remote))),
+                                      Optional.empty(),
+                                      new Cluster.Utilization(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
+                                      List.of(new Cluster.ScalingEvent(new ClusterResources(0, 0, NodeResources.unspecified()),
+                                                                       current,
+                                                                       Instant.ofEpochMilli(1234),
+                                                                       Optional.of(Instant.ofEpochMilli(2234)))),
+                                      "ideal",
+                                      "Cluster is ideally scaled",
+                                      Duration.ofMinutes(6),
+                                      0.7,
+                                      0.3);
+        nodeRepository.putApplication(zone,
+                                      new com.yahoo.vespa.hosted.controller.api.integration.configserver.Application(application,
+                                                                                                                     List.of(cluster)));
+
+        Node parent = nodeRepository().list(zone, NodeFilter.all().applications(SystemApplication.tenantHost.id())).stream().findAny()
                                       .orElseThrow(() -> new IllegalStateException("No parent hosts in " + zone));
-        nodeRepository().putByHostname(zone, new Node.Builder().hostname(hostFor(application, zone))
-                                                               .state(Node.State.reserved)
-                                                               .type(NodeType.tenant)
-                                                               .owner(application)
-                                                               .parentHostname(parent.hostname())
-                                                               .currentVersion(initialVersion)
-                                                               .wantedVersion(initialVersion)
-                                                               .currentOsVersion(Version.emptyVersion)
-                                                               .wantedOsVersion(Version.emptyVersion)
-                                                               .resources(new NodeResources(2, 8, 50, 1, slow, remote))
-                                                               .serviceState(Node.ServiceState.unorchestrated)
-                                                               .flavor("d-2-8-50")
-                                                               .clusterId("cluster")
-                                                               .clusterType(Node.ClusterType.container)
-                                                               .build());
+        nodeRepository().putNodes(zone, Node.builder().hostname(hostFor(application, zone))
+                                            .state(Node.State.reserved)
+                                            .type(NodeType.tenant)
+                                            .owner(application)
+                                            .parentHostname(parent.hostname())
+                                            .currentVersion(initialVersion)
+                                            .wantedVersion(initialVersion)
+                                            .currentDockerImage(initialDockerImage)
+                                            .wantedDockerImage(initialDockerImage)
+                                            .currentOsVersion(Version.emptyVersion)
+                                            .wantedOsVersion(Version.emptyVersion)
+                                            .resources(new NodeResources(2, 8, 50, 1, slow, remote))
+                                            .serviceState(Node.ServiceState.unorchestrated)
+                                            .flavor("d-2-8-50")
+                                            .clusterId(clusterId.value())
+                                            .clusterType(Node.ClusterType.container)
+                                            .build());
     }
 
     public HostName hostFor(ApplicationId application, ZoneId zone) {
@@ -128,18 +171,18 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
     public void addNodes(List<ZoneId> zones, List<SystemApplication> applications) {
         for (ZoneId zone : zones) {
             for (SystemApplication application : applications) {
-                List<Node> nodes = IntStream.rangeClosed(1, 3)
-                                            .mapToObj(i -> new Node.Builder()
-                                                    .hostname(HostName.from("node-" + i + "-" + application.id().application()
-                                                            .value() + "-" + zone.value()))
-                                                    .state(Node.State.active)
-                                                    .type(application.nodeType())
-                                                    .owner(application.id())
-                                                    .currentVersion(initialVersion).wantedVersion(initialVersion)
-                                                    .currentOsVersion(Version.emptyVersion).wantedOsVersion(Version.emptyVersion)
-                                                    .build())
-                                            .collect(Collectors.toList());
-                nodeRepository().putByHostname(zone, nodes);
+                for (int i = 1; i <= 3; i++) {
+                    Node node = Node.builder()
+                                    .hostname(HostName.from("node-" + i + "-" + application.id().application()
+                                                                                   .value() + "-" + zone.value()))
+                                    .state(Node.State.active)
+                                    .type(application.nodeType())
+                                    .owner(application.id())
+                                    .currentVersion(initialVersion).wantedVersion(initialVersion)
+                                    .currentOsVersion(Version.emptyVersion).wantedOsVersion(Version.emptyVersion)
+                                    .build();
+                    nodeRepository().putNodes(zone, node);
+                }
                 convergeServices(application.id(), zone);
             }
         }
@@ -147,7 +190,7 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
 
     /** Converge all services belonging to the given application */
     public void convergeServices(ApplicationId application, ZoneId zone) {
-        List<Node> nodes = nodeRepository.list(zone, application);
+        List<Node> nodes = nodeRepository.list(zone, NodeFilter.all().applications(application));
         serviceStatus.put(new DeploymentId(application, zone), new ServiceConvergence(application,
                                                                                       zone,
                                                                                       true,
@@ -165,42 +208,45 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
         return Optional.ofNullable(lastPrepareVersion);
     }
 
+    /** Sets a function that may throw, determined by app id. */
+    public void throwOnPrepare(Consumer<ApplicationId> prepareThrower) {
+        this.prepareException = prepareThrower;
+    }
+
     /** The exception to throw on the next prepare run, or null to continue normally */
     public void throwOnNextPrepare(RuntimeException prepareException) {
-        this.prepareException = prepareException;
+        this.prepareException = prepareException == null ? null : id -> { this.prepareException = null; throw prepareException; };
     }
 
     /** Set version for an application in a given zone */
-    public void setVersion(ApplicationId application, ZoneId zone, Version version) {
-        setVersion(application, zone, version, -1, false);
+    public void setVersion(Version version, ApplicationId application, ZoneId zone) {
+        setVersion(zone, nodeRepository.list(zone, NodeFilter.all().applications(application)), version, false);
     }
 
     /** Set version for nodeCount number of nodes in application in a given zone */
-    public void setVersion(ApplicationId application, ZoneId zone, Version version, int nodeCount) {
-        setVersion(application, zone, version, nodeCount, false);
+    public void setVersion(Version version, List<Node> nodes, ZoneId zone) {
+        setVersion(zone, nodes, version, false);
     }
 
     /** Set OS version for an application in a given zone */
-    public void setOsVersion(ApplicationId application, ZoneId zone, Version version) {
-        setOsVersion(application, zone, version, -1);
+    public void setOsVersion(Version version, ApplicationId application, ZoneId zone) {
+        setVersion(zone, nodeRepository.list(zone, NodeFilter.all().applications(application)), version, true);
     }
 
     /** Set OS version for an application in a given zone */
-    public void setOsVersion(ApplicationId application, ZoneId zone, Version version, int nodeCount) {
-        setVersion(application, zone, version, nodeCount, true);
+    public void setOsVersion(Version version, List<Node> nodes, ZoneId zone) {
+        setVersion(zone, nodes, version, true);
     }
 
-    private void setVersion(ApplicationId application, ZoneId zone, Version version, int nodeCount, boolean osVersion) {
-        int n = 0;
-        for (Node node : nodeRepository().list(zone, application)) {
+    private void setVersion(ZoneId zone, List<Node> nodes, Version version, boolean osVersion) {
+        for (var node : nodes) {
             Node newNode;
             if (osVersion) {
-                newNode = new Node.Builder(node).currentOsVersion(version).wantedOsVersion(version).build();
+                newNode = Node.builder(node).currentOsVersion(version).wantedOsVersion(version).build();
             } else {
-                newNode = new Node.Builder(node).currentVersion(version).wantedVersion(version).build();
+                newNode = Node.builder(node).currentVersion(version).wantedVersion(version).build();
             }
-            nodeRepository().putByHostname(zone, newNode);
-            if (++n == nodeCount) break;
+            nodeRepository().putNodes(zone, newNode);
         }
     }
 
@@ -214,7 +260,8 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
         return Optional.ofNullable(applications.get(new DeploymentId(id, zone)));
     }
 
-    public void setSuspended(DeploymentId deployment, boolean suspend) {
+    @Override
+    public void setSuspension(DeploymentId deployment, boolean suspend) {
         if (suspend)
             suspendedApplications.add(deployment);
         else
@@ -233,8 +280,8 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
         warnings.put(deployment, List.copyOf(logs));
     }
 
-    public Map<DeploymentId, Set<String>> rotationNames() {
-        return Collections.unmodifiableMap(rotationNames);
+    public Map<DeploymentId, Set<String>> containerEndpoints() {
+        return Collections.unmodifiableMap(containerEndpoints);
     }
 
     public void setMetrics(DeploymentId deployment, ClusterMetrics clusterMetrics) {
@@ -243,6 +290,14 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
 
     public void setMetrics(DeploymentId deployment, List<ClusterMetrics> clusterMetrics) {
         this.clusterMetrics.put(deployment, clusterMetrics);
+    }
+
+    public void setProtonMetrics(List<ProtonMetrics> protonMetrics) {
+        this.protonMetrics = protonMetrics;
+    }
+
+    public void deferLoadBalancerProvisioningIn(Set<Environment> environments) {
+        deferLoadBalancerProvisioning.addAll(environments);
     }
 
     @Override
@@ -298,6 +353,14 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
         return false;
     }
 
+    @Override
+    public Optional<TestReport> getTestReport(DeploymentId deployment) {
+        return Optional.ofNullable(testReport.get(deployment));
+    }
+    public void setTestReport(DeploymentId deploymentId, TestReport report) {
+        testReport.put(deploymentId, report);
+    }
+
     /** Add any of given loadBalancers that do not already exist to the load balancers in zone */
     public void putLoadBalancers(ZoneId zone, List<LoadBalancer> loadBalancers) {
         this.loadBalancers.putIfAbsent(zone, new LinkedHashSet<>());
@@ -309,43 +372,52 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
     }
 
     @Override
-    public PreparedApplication deploy(DeploymentId deployment, DeployOptions deployOptions,
-                                      Set<ContainerEndpoint> containerEndpoints,
-                                      Optional<EndpointCertificateMetadata> endpointCertificateMetadata, byte[] content) {
-        lastPrepareVersion = deployOptions.vespaVersion.map(Version::fromString).orElse(null);
-        if (prepareException != null) {
-            RuntimeException prepareException = this.prepareException;
-            this.prepareException = null;
-            throw prepareException;
-        }
-        applications.put(deployment, new Application(deployment.applicationId(), lastPrepareVersion, new ApplicationPackage(content)));
+    public PreparedApplication deploy(DeploymentData deployment) {
+        lastPrepareVersion = deployment.platform();
+        if (prepareException != null)
+            prepareException.accept(ApplicationId.from(deployment.instance().tenant(),
+                                                       deployment.instance().application(),
+                                                       deployment.instance().instance()));
+        DeploymentId id = new DeploymentId(deployment.instance(), deployment.zone());
 
-        if (nodeRepository().list(deployment.zoneId(), deployment.applicationId()).isEmpty())
-            provision(deployment.zoneId(), deployment.applicationId());
+        applications.put(id, new Application(id.applicationId(), lastPrepareVersion, new ApplicationPackage(deployment.applicationPackage())));
+        ClusterSpec.Id cluster = ClusterSpec.Id.from("default");
 
-        this.rotationNames.put(
-                deployment,
-                containerEndpoints.stream()
-                                  .map(ContainerEndpoint::names)
-                                  .flatMap(Collection::stream)
-                                  .collect(Collectors.toSet())
+        if (nodeRepository().list(id.zoneId(), NodeFilter.all().applications(id.applicationId())).isEmpty())
+            provision(id.zoneId(), id.applicationId(), cluster);
+
+        this.containerEndpoints.put(
+                id,
+                deployment.containerEndpoints().stream()
+                          .map(ContainerEndpoint::names)
+                          .flatMap(Collection::stream)
+                          .collect(Collectors.toSet())
         );
 
+        if (!deferLoadBalancerProvisioning.contains(id.zoneId().environment())) {
+            putLoadBalancers(id.zoneId(), List.of(new LoadBalancer(UUID.randomUUID().toString(),
+                                                                   id.applicationId(),
+                                                                   cluster,
+                                                                   Optional.of(HostName.from("lb-0--" + id.applicationId().serializedForm() + "--" + id.zoneId().toString())),
+                                                                   LoadBalancer.State.active,
+                                                                   Optional.of("dns-zone-1"))));
+        }
+
         return () -> {
-            Application application = applications.get(deployment);
+            Application application = applications.get(id);
             application.activate();
-            List<Node> nodes = nodeRepository.list(deployment.zoneId(), deployment.applicationId());
+            List<Node> nodes = nodeRepository.list(id.zoneId(), NodeFilter.all().applications(id.applicationId()));
             for (Node node : nodes) {
-                nodeRepository.putByHostname(deployment.zoneId(), new Node.Builder(node)
-                        .state(Node.State.active)
-                        .wantedVersion(application.version().get())
-                        .build());
+                nodeRepository.putNodes(id.zoneId(), Node.builder(node)
+                                                         .state(Node.State.active)
+                                                         .wantedVersion(application.version().get())
+                                                         .build());
             }
-            serviceStatus.put(deployment, new ServiceConvergence(deployment.applicationId(),
-                                                                 deployment.zoneId(),
-                                                                 false,
-                                                                 2,
-                                                                 nodes.stream()
+            serviceStatus.put(id, new ServiceConvergence(id.applicationId(),
+                                                         id.zoneId(),
+                                                         false,
+                                                         2,
+                                                         nodes.stream()
                                                                       .map(node -> new ServiceConvergence.Status(node.hostname(),
                                                                                                                  43,
                                                                                                                  "container",
@@ -356,14 +428,35 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
             prepareResponse.message = "foo";
             prepareResponse.configChangeActions = configChangeActions != null
                     ? configChangeActions
-                    : new ConfigChangeActions(Collections.emptyList(),
-                                              Collections.emptyList());
+                    : new ConfigChangeActions(List.of(), List.of(), List.of());
             setConfigChangeActions(null);
             prepareResponse.tenant = new TenantId("tenant");
-            prepareResponse.log = warnings.getOrDefault(deployment, Collections.emptyList());
+            prepareResponse.log = warnings.getOrDefault(id, Collections.emptyList());
             return prepareResponse;
         };
     }
+
+    @Override
+    public void reindex(DeploymentId deployment, List<String> clusterNames, List<String> documentTypes, boolean indexedOnly) { }
+
+    @Override
+    public ApplicationReindexing getReindexing(DeploymentId deployment) {
+        return new ApplicationReindexing(true,
+                                         Map.of("cluster",
+                                                new ApplicationReindexing.Cluster(Map.of("type", 100L),
+                                                                                  Map.of("type", new Status(Instant.ofEpochMilli(345),
+                                                                                                            Instant.ofEpochMilli(456),
+                                                                                                            Instant.ofEpochMilli(567),
+                                                                                                            ApplicationReindexing.State.FAILED,
+                                                                                                            "(＃｀д´)ﾉ",
+                                                                                                            0.1)))));
+    }
+
+    @Override
+    public void disableReindexing(DeploymentId deployment) { }
+
+    @Override
+    public void enableReindexing(DeploymentId deployment) { }
 
     @Override
     public boolean isSuspended(DeploymentId deployment) {
@@ -371,17 +464,18 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
     }
 
     @Override
-    public void restart(DeploymentId deployment, Optional<Hostname> hostname) {
-        nodeRepository().requestRestart(deployment, hostname.map(Identifier::id).map(HostName::from));
+    public void restart(DeploymentId deployment, RestartFilter restartFilter) {
+        nodeRepository().requestRestart(deployment, restartFilter.getHostName());
     }
 
     @Override
-    public void deactivate(DeploymentId deployment) throws NotFoundException {
+    public void deactivate(DeploymentId deployment) {
         ApplicationId applicationId = deployment.applicationId();
-        nodeRepository().removeByHostname(deployment.zoneId(),
-                                          nodeRepository().list(deployment.zoneId(), applicationId));
+        nodeRepository().removeNodes(deployment.zoneId(),
+                                     nodeRepository().list(deployment.zoneId(), NodeFilter.all().applications(applicationId)));
         if ( ! applications.containsKey(deployment))
-            throw new NotFoundException("No application with id " + applicationId + " exists, cannot deactivate");
+            return;
+
         applications.remove(deployment);
         serviceStatus.remove(deployment);
         removeLoadBalancers(deployment.applicationId(), deployment.zoneId());
@@ -391,8 +485,8 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
     @Override
     public ApplicationView getApplicationView(String tenantName, String applicationName, String instanceName,
                                               String environment, String region) {
-        String cfgHostname = String.format("https://cfg.%s.%s.test.vip:4443", environment, region);
-        String cfgServiceUrlPrefix = String.format("%s/serviceview/v1/tenant/%s/application/%s/environment/%s/region/%s/instance/%s/service",
+        String cfgHostname = Text.format("https://cfg.%s.%s.test.vip:4443", environment, region);
+        String cfgServiceUrlPrefix = Text.format("%s/serviceview/v1/tenant/%s/application/%s/environment/%s/region/%s/instance/%s/service",
                                                    cfgHostname, tenantName, applicationName,
                                                    environment, region, instanceName);
         ApplicationView applicationView = new ApplicationView();
@@ -414,8 +508,13 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
     }
 
     @Override
-    public List<ClusterMetrics> getMetrics(DeploymentId deployment) {
+    public List<ClusterMetrics> getDeploymentMetrics(DeploymentId deployment) {
         return Collections.unmodifiableList(clusterMetrics.getOrDefault(deployment, List.of()));
+    }
+
+    @Override
+    public List<ProtonMetrics> getProtonMetrics(DeploymentId deployment) {
+        return this.protonMetrics;
     }
 
     // Returns a canned example response
@@ -431,7 +530,7 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
     }
 
     @Override
-    public String getClusterControllerStatus(DeploymentId deployment, String restPath) {
+    public String getServiceStatusPage(DeploymentId deployment, String serviceName, String node, String subPath) {
         return "<h1>OK</h1>";
     }
 
@@ -462,16 +561,33 @@ public class ConfigServerMock extends AbstractComponent implements ConfigServer 
 
     @Override
     public InputStream getLogs(DeploymentId deployment, Map<String, String> queryParameters) {
-        return new ByteArrayInputStream(log.getBytes(StandardCharsets.UTF_8));
+        return new ByteArrayInputStream(log.get().getBytes(StandardCharsets.UTF_8));
     }
 
-    public void setLogStream(String log) {
+    @Override
+    public ProxyResponse getApplicationPackageContent(DeploymentId deployment, String path, URI requestUri) {
+        return new ProxyResponse("{\"path\":\"" + path + "\"}", "application/json", 200);
+    }
+
+    public void setLogStream(Supplier<String> log) {
         this.log = log;
     }
 
     @Override
     public List<String> getContentClusters(DeploymentId deployment) {
         return Collections.singletonList("music");
+    }
+
+    @Override
+    public QuotaUsage getQuotaUsage(DeploymentId deploymentId) {
+        var q = new QuotaUsage();
+        q.rate = 42.42;
+        return q;
+    }
+
+    @Override
+    public String validateSecretStore(DeploymentId deployment, TenantSecretStore tenantSecretStore, String region, String parameterName) {
+        return "{\"settings\":{\"name\":\"foo\",\"role\":\"vespa-secretstore-access\",\"awsId\":\"892075328880\",\"externalId\":\"*****\",\"region\":\"us-east-1\"},\"status\":\"ok\"}";
     }
 
     public static class Application {
