@@ -2,9 +2,10 @@
 package com.yahoo.vespa.flags;
 
 import javax.annotation.concurrent.Immutable;
-import java.util.Arrays;
-import java.util.Collections;
+import java.time.Instant;
+import java.util.EnumSet;
 import java.util.List;
+import java.util.Set;
 
 /**
  * @author hakonhall
@@ -12,16 +13,29 @@ import java.util.List;
 @Immutable
 public class FlagDefinition {
     private final UnboundFlag<?, ?, ?> unboundFlag;
+    private final List<String> owners;
+    private final Instant createdAt;
+    private final Instant expiresAt;
     private final String description;
     private final String modificationEffect;
     private final List<FetchVector.Dimension> dimensions;
 
-    public FlagDefinition(UnboundFlag<?, ?, ?> unboundFlag, String description, String modificationEffect,
-                          FetchVector.Dimension... dimensions) {
+    public FlagDefinition(
+            UnboundFlag<?, ?, ?> unboundFlag,
+            List<String> owners,
+            Instant createdAt,
+            Instant expiresAt,
+            String description,
+            String modificationEffect,
+            FetchVector.Dimension... dimensions) {
         this.unboundFlag = unboundFlag;
+        this.owners = owners;
+        this.createdAt = createdAt;
+        this.expiresAt = expiresAt;
         this.description = description;
         this.modificationEffect = modificationEffect;
-        this.dimensions = Collections.unmodifiableList(Arrays.asList(dimensions));
+        this.dimensions = List.of(dimensions);
+        validate(owners, createdAt, expiresAt, this.dimensions);
     }
 
     public UnboundFlag<?, ?, ?> getUnboundFlag() {
@@ -38,5 +52,38 @@ public class FlagDefinition {
 
     public String getModificationEffect() {
         return modificationEffect;
+    }
+
+    public List<String> getOwners() { return owners; }
+
+    public Instant getCreatedAt() { return createdAt; }
+
+    public Instant getExpiresAt() { return expiresAt; }
+
+    private static void validate(List<String> owners, Instant createdAt, Instant expiresAt, List<FetchVector.Dimension> dimensions) {
+        if (expiresAt.isBefore(createdAt)) {
+            throw new IllegalArgumentException(
+                    String.format(
+                            "Flag cannot expire before its creation date (createdAt='%s', expiresAt='%s')",
+                            createdAt, expiresAt));
+        }
+
+        if (owners == PermanentFlags.OWNERS) {
+            if (!createdAt.equals(PermanentFlags.CREATED_AT) || !expiresAt.equals(PermanentFlags.EXPIRES_AT)) {
+                throw new IllegalArgumentException("Invalid creation or expiration date for permanent flag");
+            }
+        } else if (owners.isEmpty()) {
+            throw new IllegalArgumentException("Owner(s) must be specified");
+        }
+
+        if (dimensions.contains(FetchVector.Dimension.CONSOLE_USER_EMAIL)) {
+            Set<FetchVector.Dimension> disallowedCombinations = EnumSet.allOf(FetchVector.Dimension.class);
+            disallowedCombinations.remove(FetchVector.Dimension.CONSOLE_USER_EMAIL);
+            disallowedCombinations.remove(FetchVector.Dimension.APPLICATION_ID);
+            disallowedCombinations.remove(FetchVector.Dimension.TENANT_ID);
+            disallowedCombinations.retainAll(dimensions);
+            if (!disallowedCombinations.isEmpty())
+                throw new IllegalArgumentException("Dimension " + FetchVector.Dimension.CONSOLE_USER_EMAIL + " cannot be combined with " + disallowedCombinations);
+        }
     }
 }
