@@ -1,17 +1,18 @@
 // Copyright 2018 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.hosted.provision.testutils;
 
+import com.yahoo.config.provision.ActivationContext;
 import com.yahoo.config.provision.ApplicationId;
+import com.yahoo.config.provision.ApplicationTransaction;
 import com.yahoo.config.provision.Capacity;
 import com.yahoo.config.provision.ClusterSpec;
 import com.yahoo.config.provision.HostFilter;
 import com.yahoo.config.provision.HostSpec;
+import com.yahoo.config.provision.ProvisionLock;
 import com.yahoo.config.provision.ProvisionLogger;
 import com.yahoo.config.provision.Provisioner;
-import com.yahoo.transaction.NestedTransaction;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -20,23 +21,22 @@ import java.util.List;
 public class MockProvisioner implements Provisioner {
 
     @Override
-    public List<HostSpec> prepare(ApplicationId applicationId, ClusterSpec cluster, Capacity capacity, int groups, ProvisionLogger logger) {
-        return Collections.emptyList();
+    public List<HostSpec> prepare(ApplicationId applicationId, ClusterSpec cluster, Capacity capacity, ProvisionLogger logger) {
+        return List.of();
     }
 
     @Override
-    public void activate(NestedTransaction transaction, ApplicationId application, Collection<HostSpec> hosts) {
-
-    }
+    public void activate(Collection<HostSpec> hosts, ActivationContext context, ApplicationTransaction transaction) { }
 
     @Override
-    public void remove(NestedTransaction transaction, ApplicationId application) {
-
-    }
+    public void remove(ApplicationTransaction transaction) { }
 
     @Override
-    public void restart(ApplicationId application, HostFilter filter) {
+    public void restart(ApplicationId application, HostFilter filter) { }
 
+    @Override
+    public ProvisionLock lock(ApplicationId application) {
+        return null;
     }
 
 }
