@@ -1,10 +1,11 @@
 // Copyright 2017 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.hosted.provision.maintenance;
 
-import com.yahoo.component.Version;
+import com.yahoo.component.Vtag;
 import com.yahoo.config.provision.ApplicationId;
 import com.yahoo.config.provision.ApplicationName;
 import com.yahoo.config.provision.Capacity;
+import com.yahoo.config.provision.ClusterResources;
 import com.yahoo.config.provision.ClusterSpec;
 import com.yahoo.config.provision.Environment;
 import com.yahoo.config.provision.HostSpec;
@@ -15,8 +16,10 @@ import com.yahoo.config.provision.RegionName;
 import com.yahoo.config.provision.TenantName;
 import com.yahoo.config.provision.Zone;
 import com.yahoo.vespa.hosted.provision.Node;
+import com.yahoo.vespa.hosted.provision.NodeList;
 import com.yahoo.vespa.hosted.provision.node.Agent;
 import com.yahoo.vespa.hosted.provision.node.History;
+import com.yahoo.vespa.hosted.provision.node.filter.NodeListFilter;
 import com.yahoo.vespa.hosted.provision.provisioning.ProvisioningTester;
 import com.yahoo.vespa.hosted.provision.testutils.MockDeployer;
 import com.yahoo.vespa.orchestrator.OrchestrationException;
@@ -24,14 +27,16 @@ import com.yahoo.vespa.orchestrator.Orchestrator;
 import org.junit.Test;
 
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
@@ -51,86 +56,50 @@ public class InactiveAndFailedExpirerTest {
     @Test
     public void inactive_and_failed_times_out() {
         ProvisioningTester tester = new ProvisioningTester.Builder().zone(new Zone(Environment.prod, RegionName.from("us-east"))).build();
-        List<Node> nodes = tester.makeReadyNodes(2, nodeResources);
+        tester.makeReadyNodes(2, nodeResources);
 
         // Allocate then deallocate 2 nodes
-        ClusterSpec cluster = ClusterSpec.request(ClusterSpec.Type.content, ClusterSpec.Id.from("test"), Version.fromString("6.42"), false);
-        List<HostSpec> preparedNodes = tester.prepare(applicationId, cluster, Capacity.fromCount(2, nodeResources), 1);
+        ClusterSpec cluster = ClusterSpec.request(ClusterSpec.Type.content, ClusterSpec.Id.from("test")).vespaVersion("6.42").build();
+        List<HostSpec> preparedNodes = tester.prepare(applicationId, cluster, Capacity.from(new ClusterResources(2, 1, nodeResources)));
         tester.activate(applicationId, new HashSet<>(preparedNodes));
         assertEquals(2, tester.getNodes(applicationId, Node.State.active).size());
-        tester.deactivate(applicationId);
+        tester.activate(applicationId, List.of());
         List<Node> inactiveNodes = tester.getNodes(applicationId, Node.State.inactive).asList();
         assertEquals(2, inactiveNodes.size());
 
         // Inactive times out
         tester.advanceTime(Duration.ofMinutes(14));
-        new InactiveExpirer(tester.nodeRepository(), tester.clock(), Duration.ofMinutes(10)).run();
-        assertEquals(0, tester.nodeRepository().getNodes(Node.State.inactive).size());
-        List<Node> dirty = tester.nodeRepository().getNodes(Node.State.dirty);
+        new InactiveExpirer(tester.nodeRepository(), Duration.ofMinutes(10), Map.of(), new TestMetric()).run();
+        assertEquals(0, tester.nodeRepository().nodes().list(Node.State.inactive).size());
+        NodeList dirty = tester.nodeRepository().nodes().list(Node.State.dirty);
         assertEquals(2, dirty.size());
-        assertFalse(dirty.get(0).allocation().isPresent());
-        assertFalse(dirty.get(1).allocation().isPresent());
 
         // One node is set back to ready
-        Node ready = tester.nodeRepository().setReady(Collections.singletonList(dirty.get(0)), Agent.system, getClass().getSimpleName()).get(0);
+        Node ready = tester.nodeRepository().nodes().setReady(List.of(dirty.asList().get(0)), Agent.system, getClass().getSimpleName()).get(0);
         assertEquals("Allocated history is removed on readying",
-                Arrays.asList(History.Event.Type.provisioned, History.Event.Type.readied),
+                List.of(History.Event.Type.provisioned, History.Event.Type.readied),
                 ready.history().events().stream().map(History.Event::type).collect(Collectors.toList()));
 
         // Dirty times out for the other one
         tester.advanceTime(Duration.ofMinutes(14));
-        new DirtyExpirer(tester.nodeRepository(), tester.clock(), Duration.ofMinutes(10)).run();
-        assertEquals(0, tester.nodeRepository().getNodes(NodeType.tenant, Node.State.dirty).size());
-        List<Node> failed = tester.nodeRepository().getNodes(NodeType.tenant, Node.State.failed);
+        new DirtyExpirer(tester.nodeRepository(), Duration.ofMinutes(10), new TestMetric()).run();
+        assertEquals(0, tester.nodeRepository().nodes().list(Node.State.dirty).nodeType(NodeType.tenant).size());
+        NodeList failed = tester.nodeRepository().nodes().list(Node.State.failed).nodeType(NodeType.tenant);
         assertEquals(1, failed.size());
-        assertEquals(1, failed.get(0).status().failCount());
-    }
-
-    @Test
-    public void reboot_generation_is_increased_when_node_moves_to_dirty() {
-        ProvisioningTester tester = new ProvisioningTester.Builder().zone(new Zone(Environment.prod, RegionName.from("us-east"))).build();
-        List<Node> nodes = tester.makeReadyNodes(2, nodeResources);
-
-        // Allocate and deallocate a single node
-        ClusterSpec cluster = ClusterSpec.request(ClusterSpec.Type.content,
-                                                  ClusterSpec.Id.from("test"),
-                                                  Version.fromString("6.42"),
-                                                  false);
-        List<HostSpec> preparedNodes = tester.prepare(applicationId, cluster, Capacity.fromCount(2, nodeResources), 1);
-        tester.activate(applicationId, new HashSet<>(preparedNodes));
-        assertEquals(2, tester.getNodes(applicationId, Node.State.active).size());
-        tester.deactivate(applicationId);
-        List<Node> inactiveNodes = tester.getNodes(applicationId, Node.State.inactive).asList();
-        assertEquals(2, inactiveNodes.size());
-
-        // Check reboot generation before node is moved. New nodes transition from provisioned to dirty, so their
-        // wanted reboot generation will always be 1.
-        long wantedRebootGeneration = inactiveNodes.get(0).status().reboot().wanted();
-        assertEquals(1, wantedRebootGeneration);
-
-        // Inactive times out and node is moved to dirty
-        tester.advanceTime(Duration.ofMinutes(14));
-        new InactiveExpirer(tester.nodeRepository(), tester.clock(), Duration.ofMinutes(10)).run();
-        List<Node> dirty = tester.nodeRepository().getNodes(Node.State.dirty);
-        assertEquals(2, dirty.size());
-
-        // Reboot generation is increased
-        assertEquals(wantedRebootGeneration + 1, dirty.get(0).status().reboot().wanted());
+        assertEquals(1, failed.first().get().status().failCount());
     }
 
     @Test
     public void node_that_wants_to_retire_is_moved_to_parked() throws OrchestrationException {
         ProvisioningTester tester = new ProvisioningTester.Builder().zone(new Zone(Environment.prod, RegionName.from("us-east"))).build();
-        ClusterSpec cluster = ClusterSpec.request(ClusterSpec.Type.content, ClusterSpec.Id.from("test"),
-                                                  Version.fromString("6.42"), false);
+        ClusterSpec cluster = ClusterSpec.request(ClusterSpec.Type.content, ClusterSpec.Id.from("test")).vespaVersion("6.42").build();
         tester.makeReadyNodes(5, nodeResources);
 
         // Allocate two nodes
         {
             List<HostSpec> hostSpecs = tester.prepare(applicationId,
                                                       cluster,
-                                                      Capacity.fromCount(2, nodeResources),
-                                                      1);
+                                                      Capacity.from(new ClusterResources(2, 1, nodeResources)));
             tester.activate(applicationId, new HashSet<>(hostSpecs));
             assertEquals(2, tester.getNodes(applicationId, Node.State.active).size());
         }
@@ -138,8 +107,8 @@ public class InactiveAndFailedExpirerTest {
         // Flag one node for retirement and redeploy
         {
             Node toRetire = tester.getNodes(applicationId, Node.State.active).asList().get(0);
-            tester.patchNode(toRetire.withWantToRetire(true, Agent.operator, tester.clock().instant()));
-            List<HostSpec> hostSpecs = tester.prepare(applicationId, cluster, Capacity.fromCount(2, nodeResources), 1);
+            tester.patchNode(toRetire, (node) -> node.withWantToRetire(true, Agent.operator, tester.clock().instant()));
+            List<HostSpec> hostSpecs = tester.prepare(applicationId, cluster, Capacity.from(new ClusterResources(2, 1, nodeResources)));
             tester.activate(applicationId, new HashSet<>(hostSpecs));
         }
 
@@ -151,26 +120,24 @@ public class InactiveAndFailedExpirerTest {
                 Collections.singletonMap(
                         applicationId,
                         new MockDeployer.ApplicationContext(applicationId, cluster,
-                                                            Capacity.fromCount(2,
-                                                                               nodeResources,
-                                                                               false, true),
-                                                            1)
+                                                            Capacity.from(new ClusterResources(2, 1, nodeResources),
+                                                                          false, true))
                 )
         );
         Orchestrator orchestrator = mock(Orchestrator.class);
         doThrow(new RuntimeException()).when(orchestrator).acquirePermissionToRemove(any());
-        new RetiredExpirer(tester.nodeRepository(), tester.orchestrator(), deployer, tester.clock(), Duration.ofDays(30),
-                           Duration.ofMinutes(10)).run();
-        assertEquals(1, tester.nodeRepository().getNodes(Node.State.inactive).size());
+        new RetiredExpirer(tester.nodeRepository(), tester.orchestrator(), deployer, new TestMetric(),
+                           Duration.ofDays(30), Duration.ofMinutes(10)).run();
+        assertEquals(1, tester.nodeRepository().nodes().list(Node.State.inactive).size());
 
         // Inactive times out and one node is moved to parked
         tester.advanceTime(Duration.ofMinutes(11)); // Trigger InactiveExpirer
-        new InactiveExpirer(tester.nodeRepository(), tester.clock(), Duration.ofMinutes(10)).run();
-        assertEquals(1, tester.nodeRepository().getNodes(Node.State.parked).size());
+        new InactiveExpirer(tester.nodeRepository(), Duration.ofMinutes(10), Map.of(), new TestMetric()).run();
+        assertEquals(1, tester.nodeRepository().nodes().list(Node.State.parked).size());
     }
 
     @Test
-    public void testersExpireImmediately() {
+    public void tester_applications_expire_immediately() {
         ApplicationId testerId = ApplicationId.from(applicationId.tenant().value(),
                                                     applicationId.application().value(),
                                                     applicationId.instance().value() + "-t");
@@ -178,21 +145,64 @@ public class InactiveAndFailedExpirerTest {
         // Allocate then deallocate a node
         ProvisioningTester tester = new ProvisioningTester.Builder().zone(new Zone(Environment.prod, RegionName.from("us-east"))).build();
         tester.makeReadyNodes(1, nodeResources);
-        ClusterSpec cluster = ClusterSpec.request(ClusterSpec.Type.content, ClusterSpec.Id.from("test"), Version.fromString("6.42"), false);
-        List<HostSpec> preparedNodes = tester.prepare(testerId, cluster, Capacity.fromCount(2, nodeResources), 1);
+        ClusterSpec cluster = ClusterSpec.request(ClusterSpec.Type.content, ClusterSpec.Id.from("test")).vespaVersion("6.42").build();
+        List<HostSpec> preparedNodes = tester.prepare(testerId, cluster, Capacity.from(new ClusterResources(2, 1, nodeResources)));
         tester.activate(testerId, new HashSet<>(preparedNodes));
         assertEquals(1, tester.getNodes(testerId, Node.State.active).size());
-        tester.deactivate(testerId);
+        tester.activate(testerId, List.of());
         List<Node> inactiveNodes = tester.getNodes(testerId, Node.State.inactive).asList();
         assertEquals(1, inactiveNodes.size());
 
         // See that nodes are moved to dirty immediately.
-        new InactiveExpirer(tester.nodeRepository(), tester.clock(), Duration.ofMinutes(10)).run();
-        assertEquals(0, tester.nodeRepository().getNodes(Node.State.inactive).size());
-        List<Node> dirty = tester.nodeRepository().getNodes(Node.State.dirty);
+        new InactiveExpirer(tester.nodeRepository(), Duration.ofMinutes(10), Map.of(), new TestMetric()).run();
+        assertEquals(0, tester.nodeRepository().nodes().list(Node.State.inactive).size());
+        NodeList dirty = tester.nodeRepository().nodes().list(Node.State.dirty);
         assertEquals(1, dirty.size());
-        assertFalse(dirty.get(0).allocation().isPresent());
+        assertTrue(dirty.first().get().allocation().isPresent());
+    }
 
+    @Test
+    public void nodes_marked_for_deprovisioning_move_to_parked() {
+        ProvisioningTester tester = new ProvisioningTester.Builder().zone(new Zone(Environment.prod, RegionName.from("us-east"))).build();
+        tester.makeReadyHosts(2, nodeResources);
+
+        // Activate and deallocate
+        ClusterSpec cluster = ClusterSpec.request(ClusterSpec.Type.content, ClusterSpec.Id.from("test")).vespaVersion("6.42").build();
+        List<HostSpec> preparedNodes = tester.prepare(applicationId, cluster, Capacity.fromRequiredNodeType(NodeType.host));
+        tester.activate(applicationId, new HashSet<>(preparedNodes));
+        assertEquals(2, tester.getNodes(applicationId, Node.State.active).size());
+        tester.activate(applicationId, List.of());
+        List<Node> inactiveNodes = tester.getNodes(applicationId, Node.State.inactive).asList();
+        assertEquals(2, inactiveNodes.size());
+
+        // Nodes marked for deprovisioning are moved to parked
+        tester.patchNodes(inactiveNodes, (node) -> node.withWantToRetire(true, true, Agent.system, tester.clock().instant()));
+        tester.advanceTime(Duration.ofMinutes(11));
+        new InactiveExpirer(tester.nodeRepository(), Duration.ofMinutes(10), Map.of(), new TestMetric()).run();
+        assertEquals(2, tester.nodeRepository().nodes().list(Node.State.parked).size());
+    }
+
+    @Test
+    public void inactive_config_server_expires_according_to_custom_timeout() {
+        ProvisioningTester tester = new ProvisioningTester.Builder().zone(new Zone(Environment.prod, RegionName.from("us-east"))).build();
+        InactiveExpirer expirer = new InactiveExpirer(tester.nodeRepository(), Duration.ofHours(1),
+                                                      Map.of(NodeType.config, Duration.ofMinutes(5)),
+                                                      new TestMetric());
+        NodeList nodes = tester.makeConfigServers(3, "default", Vtag.currentVersion);
+        Supplier<Node> firstNode = () -> tester.nodeRepository().nodes().node(nodes.first().get().hostname()).get();
+        ApplicationId application = firstNode.get().allocation().get().owner();
+
+        // Retired config server is moved to inactive
+        tester.nodeRepository().nodes().retire(NodeListFilter.from(firstNode.get()), Agent.system, tester.clock().instant());
+        tester.prepareAndActivateInfraApplication(application, NodeType.config);
+        assertSame(Node.State.inactive, firstNode.get().state());
+        expirer.maintain();
+        assertSame(Node.State.inactive, firstNode.get().state());
+
+        // Config server expires
+        tester.clock().advance(Duration.ofMinutes(5).plus(Duration.ofSeconds(1)));
+        expirer.maintain();
+        assertSame(Node.State.dirty, firstNode.get().state());
     }
 
 }
